CI images update

--- a/images/man-re-xanh-16/config.ini
+++ b/images/man-re-xanh-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-re-xanh-16.html
 lastopen = 2024-06-07 00:33:03
 
 [search]
-lastsearch = 2024-07-21 00:17:50
+lastsearch = 2024-07-21 00:45:59
 
 [www.accessdata.fda.gov]
 match = -142.9%%
@@ -17,9 +17,9 @@ title = Davina Xanh (4/4/2024) - Athlete Awards
 url = https://bigwest.org/awards.aspx?aow=1106
 
 [www.imdb.com]
-match = -14.3%%
-title = The Jungle Book (2016)
-url = https://www.imdb.com/title/tt3040964/
+match = -157.1%%
+title = She-Hulk: Attorney at Law (TV Series 2022)
+url = https://www.imdb.com/title/tt10857160/
 
 [www.etsy.com]
 match = 35.7%%
@@ -112,9 +112,9 @@ title = GREEN TEA - Uses, Side Effects, and More
 url = https://www.webmd.com/vitamins/ai/ingredientmono-960/green-tea
 
 [en.wikipedia.org]
-match = 7.1%%
-title = Little green men
-url = https://en.wikipedia.org/wiki/Little_green_men
+match = -18.2%%
+title = Ultraviolet
+url = https://en.wikipedia.org/wiki/Ultraviolet
 
 [www.yeastdriven.com]
 match = -114.3%%
@@ -122,9 +122,9 @@ title = Bia Trà Xanh - Green Tea Saison Recipe
 url = https://www.yeastdriven.com/2019/01/16/bia-tra-xanh-vietnamese-green-tea-saison/
 
 [www.tiktok.com]
-match = -178.6%%
-title = Where to Find Mafia Bosses in Taxi Boss Level 16
-url = https://www.tiktok.com/discover/where-to-find-mafia-bosses-in-taxi-boss-level-16?lang=en
+match = -250.0%%
+title = Urban Downhill at 2 Alpes, France 💨 (IG🎥: @antonivilloni ...
+url = https://www.tiktok.com/@extremeofficial/video/7392931386618891553
 
 [www.blueman.com]
 match = -100.0%%
@@ -315,4 +315,9 @@ url = https://dienmaycholon.com/dien-thoai-di-dong-samsung
 match = -221.4%%
 title = Noisy hotel! - Review of Dong Xanh Hotel, Chau Doc ...
 url = https://www.tripadvisor.com/ShowUserReviews-g311303-d9794497-r549078009-Dong_Xanh_Hotel-Chau_Doc_An_Giang_Province.html
+
+[www.beyondblue.org.au]
+match = -257.1%%
+title = Beyond Blue | 24/7 Support for Anxiety, Depression and ...
+url = https://www.beyondblue.org.au/
 
