--- a/images/man-ren-16/config.ini
+++ b/images/man-ren-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-ren-16.html
 lastopen = 2024-06-07 00:52:49
 
 [search]
-lastsearch = 2024-07-20 23:46:54
+lastsearch = 2024-07-21 00:49:33
 
 [quizlet.com]
 match = -170.0%%
@@ -54,7 +54,7 @@ url = https://en.wikipedia.org/wiki/MC_Ren
 [books.google.com]
 match = -430.0%%
 title = Proceedings of the 10th West Coast Conference on Formal ...
-url = https://books.google.com/books?id=BQ93UeXC1_kC&pg=PA187&lpg=PA187&dq=man+ren+16&source=bl&ots=ftlfmQHlj9&sig=ACfU3U3gvwe3lpJYw8ma2JJzzuRLybQtGQ&hl=en&sa=X&ved=2ahUKEwi0sez5iLaHAxWOCnkGHQE_CIQQ6AF6BAgWEAM
+url = https://books.google.com/books?id=BQ93UeXC1_kC&pg=PA187&lpg=PA187&dq=man+ren+16&source=bl&ots=ftlfmQKsp8&sig=ACfU3U0gnY0HxzXvsdLInShuZfa8-x7bMg&hl=en&sa=X&ved=2ahUKEwjimYD6lraHAxXrKlkFHQQXCDgQ6AF6BAgVEAM
 
 [www.phillyvoice.com]
 match = 0.0%%
