--- a/images/bo-chan-ga-goi-mau-re-16/config.ini
+++ b/images/bo-chan-ga-goi-mau-re-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-chan-ga-goi-mau-re-16.html
 lastopen = 2024-06-09 23:45:13
 
 [search]
-lastsearch = 2024-07-20 23:17:17
+lastsearch = 2024-07-21 00:51:31
 
 [changagoidemsonghong.com]
 match = 4.2%%
@@ -77,14 +77,14 @@ title = Các mẫu chăn ga gối đệm đẹp và đáng mua nhất hiện nay
 url = https://ru9.vn/blogs/magazine/cac-mau-chan-ga-goi-dem
 
 [shopee.vn]
-match = -75.0%%
-title = {1}Bộ ga thun 4 món 16 màu drap giường thun lạnh Hàn ...
-url = https://shopee.vn/-1-Bộ-ga-thun-4-món-16-màu-drap-giường-thun-lạnh-Hàn-Quốc-i.11438690.167422602
+match = -62.5%%
+title = bộ chăn ga gối màu xanh lá giá tốt Tháng 7, 2024 | Mua ngay
+url = https://shopee.vn/search?keyword=bộ chăn ga gối màu xanh lá&urlold=bo-chan-ga-goi-thun-1-mau-xanh-la-non/955821120876975099/877968015750663345/ 
 
 [demxanh.com]
-match = 20.8%%
-title = Chăn ga gối cotton Notag 4 món 16
-url = https://demxanh.com/chan-ga-goi-cotton-notag-4-mon-16.html
+match = -54.2%%
+title = [HOT 2024] Top 30 mẫu ảnh chăn ga gối đệm màu tối đẹp ...
+url = https://demxanh.com/chan-ga-goi-dem-mau-toi.html
 
 [changagoibenlinda.com]
 match = -12.5%%
