--- a/images/chieu-lac-soc-16/config.ini
+++ b/images/chieu-lac-soc-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-soc-16.html
 lastopen = 2024-06-09 23:48:14
 
 [search]
-lastsearch = 2024-07-20 20:26:49
+lastsearch = 2024-07-21 00:53:11
 
 [www.pnj.com.vn]
 match = -56.2%%
@@ -63,18 +63,18 @@ url = https://moveek.com/rap/lotte-kosmo-tay-ho/
 
 [baolongan.vn]
 match = -31.2%%
-title = Giữ nghề dệt chiếu Long Cang
-url = https://baolongan.vn/giu-nghe-det-chieu-long-cang-a169502.html
+title = Nhớ nghề dệt chiếu quê tôi
+url = https://baolongan.vn/nho-nghe-det-chieu-que-toi-a168262.html
 
 [www.youtube.com]
-match = -231.2%%
-title = Bộ ngoại giao thông tin về việc điều tra, hậu sự nhóm người ...
-url = https://www.youtube.com/watch?v=rUGm2ZH8ccc
+match = -200.0%%
+title = Bán Trà Đá 15K Chơi Chiêu Tráo 500K Đụng Ngay Con Trai ...
+url = https://www.youtube.com/watch?v=MIO-5nY_e5g
 
 [books.google.com]
-match = -206.2%%
-title = Quân lực Việt-Nam: Quân lực Việt Nam Cộng Hòa trong giai ...
-url = https://books.google.com/books?id=RvXeAAAAMAAJ&pg=PA17&lpg=PA17&dq=chieu+lac+soc+16&source=bl&ots=aZ3SwmZd5J&sig=ACfU3U2vVAiGNfXA0dUXqjzs8DCrfDBQng&hl=en&sa=X&ved=2ahUKEwjSirG3sbWHAxUhJkQIHWxlAkkQ6AF6BAgYEAM
+match = -231.2%%
+title = Tan tu kinh: Ou, Le livre des phrases de trois caractères, ...
+url = https://books.google.com/books?id=oBfqEAAAQBAJ&pg=PA307-IA40&lpg=PA307-IA40&dq=chieu+lac+soc+16&source=bl&ots=DTBjZBMyX7&sig=ACfU3U25YlI2i8627MEO9L27XV6hiWoh7Q&hl=en&sa=X&ved=2ahUKEwjcqpLil7aHAxWLEFkFHTbACTUQ6AF6BAgcEAM
 
 [dantocmiennui.vn]
 match = -125.0%%
