--- a/images/tham-giuong-bo-de-14/config.ini
+++ b/images/tham-giuong-bo-de-14/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/tham-giuong-bo-de-14.html
 lastopen = 2024-06-10 01:25:14
 
 [search]
-lastsearch = 2024-07-20 21:47:42
+lastsearch = 2024-07-21 00:47:28
 
 [erado.vn]
-match = 5.0%%
-title = Giường da hạng sang mã DV14
-url = https://erado.vn/giuong-dang-giam-gia/giuong-da-hang-sang-ma-dv14.html
+match = 0.0%%
+title = Giường ngủ da hạng sang mã 14
+url = https://erado.vn/giuong-dat-theo-yeu-cau/giuong-ngu-da-hang-sang-ma-14.html
 
 [shopee.vn]
-match = -105.0%%
-title = Giường xếp - Giá Tốt, Miễn Phí Vận Chuyển, Đủ Loại
-url = https://shopee.vn/list/giường xếp
+match = -65.0%%
+title = thảm trải giường giá tốt Tháng 7, 2024 | Mua ngay
+url = https://shopee.vn/search?keyword=thảm trải giường
 
 [noithatami.com]
 match = -75.0%%
@@ -72,9 +72,9 @@ title = Thảm lông trải giường 1m x 2m hàng chính hãng, giao nhanh
 url = https://tiki.vn/search?q=thảm+lông+trải+giường+1m+x+2m
 
 [noithattamviet.net]
-match = -10.0%%
-title = Giường ngủ gỗ công nghiệp GCN-14
-url = https://noithattamviet.net/giuong-ngu-go-cong-nghiep-gcn-14
+match = -30.0%%
+title = Giường bọc nhung gỗ công nghiệp GB-14
+url = https://noithattamviet.net/giuong-boc-nhung-go-cong-nghiep-gb-14
 
 [nemphuoclong.vn]
 match = -55.0%%
@@ -114,7 +114,7 @@ url = https://www.lazada.vn/products/hcmvai-bo-giuong-xep-us-giuong-xep-nhom-my-
 [www.diepxuan.com]
 match = 10.0%%
 title = Thảm giường Bode 160x200 - Điệp Xuân
-url = https://www.diepxuan.com/tham-giuong-bode-160x200.html?srsltid=AfmBOorsL7yWLxPEGRoF5zLgOPDwDDpkTQu0KapCmAnT33RejdULscs2
+url = https://www.diepxuan.com/tham-giuong-bode-160x200.html
 
 [www.sendo.vn]
 match = -95.0%%
