--- a/images/tui-nem-korea-tuan-anh-16/config.ini
+++ b/images/tui-nem-korea-tuan-anh-16/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tui-nem-korea-tuan-anh-16.html
 lastopen = 2024-06-17 10:42:58
 
 [search]
-lastsearch = 2024-07-21 00:15:58
+lastsearch = 2024-07-21 00:49:46
 
 [tuananh.vn]
-match = 22.2%%
-title = Đệm Korea Gấm Plus
-url = https://tuananh.vn/dem-korea-gam-plus-p223.html
+match = 12.0%%
+title = Đệm bông Adaptive Fiber 3M
+url = https://tuananh.vn/dem-bong-adaptive-3m-p345.html
 
 [demxanh.com]
 match = -48.0%%
