--- a/images/vo-chan-ks-uc-20-230/config.ini
+++ b/images/vo-chan-ks-uc-20-230/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/vo-chan-ks-uc-20-230.html
 lastopen = 2024-06-10 00:43:14
 
 [search]
-lastsearch = 2024-07-20 20:28:45
+lastsearch = 2024-07-21 00:46:22
 
 [www.dir.ca.gov]
 match = -28.6%%
@@ -12,9 +12,9 @@ title = Lien Claimants
 url = https://www.dir.ca.gov/ftproot/EAMSLienClaimants.txt
 
 [profiles.ucsf.edu]
-match = -15.0%%
-title = Christina Mangurian, MD, MAS
-url = https://profiles.ucsf.edu/christina.mangurian
+match = 10.0%%
+title = Joan Hilton, DSc, MPH
+url = https://profiles.ucsf.edu/joan.hilton
 
 [cityofclovis.com]
 match = -65.0%%
@@ -74,7 +74,7 @@ url = https://www.uc.edu/about/financial-aid/starting/apply.html
 [pubmed.ncbi.nlm.nih.gov]
 match = -180.0%%
 title = Polygenic risk modeling for prediction of epithelial ovarian ...
-url = https://pubmed.ncbi.nlm.nih.gov/35027648/
+url = https://pubmed.ncbi.nlm.nih.gov/35314806/
 
 [escholarship.org]
 match = -33.3%%
@@ -122,9 +122,9 @@ title = School Start Time research & information
 url = https://sd25.senate.ca.gov/sites/sd25.senate.ca.gov/files/research_booklet_sb_328_pdf.pdf
 
 [www.west-cs.com]
-match = -100.0%%
-title = KS 98-1 Multi-function unit Engineering manual
-url = https://www.west-cs.com/assets/Manuals/KS-98-ManualFull_9499-040-82711.pdf
+match = -183.3%%
+title = KS90-1
+url = https://www.west-cs.com/assets/Manuals/PMA-KS90-1-Programmer-Manual-englisch-9499-040-66111.pdf
 
 [faculty.mdanderson.org]
 match = -100.0%%
