CI images update

--- a/images/man-re-xanh-10/config.ini
+++ b/images/man-re-xanh-10/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-re-xanh-10.html
 lastopen = 2024-06-07 00:54:04
 
 [search]
-lastsearch = 2024-07-21 00:18:22
+lastsearch = 2024-07-21 01:18:33
 
 [screenrant.com]
 match = 0.0%%
@@ -32,8 +32,8 @@ title = Màn chụp giá rẻ
 url = https://demxanh.com/man-chup-gia-re.html
 
 [www.uscis.gov]
-match = -50.0%%
-title = Explore my Options | USCIS
+match = -7.1%%
+title = Explore my Options
 url = https://www.uscis.gov/forms/explore-my-options
 
 [www.evergreenrecreation.com]
@@ -47,9 +47,9 @@ title = Man City - Transfer news, results, fixtures, video and audio
 url = https://www.bbc.com/sport/football/teams/manchester-city
 
 [www.thegioididong.com]
-match = -185.7%%
-title = Hướng dẫn 10 cách khắc phục màn hình xanh Win 10 ...
-url = https://www.thegioididong.com/hoi-dap/cau-hoi-845976
+match = -264.3%%
+title = OPPO Reno10 5G 8GB/256GB - Chính hãng, giá tốt, có trả ...
+url = https://www.thegioididong.com/dtdd/oppo-reno10
 
 [www.asianfood.no]
 match = -42.9%%
@@ -88,8 +88,8 @@ url = https://en.wikipedia.org/wiki/Green_card
 
 [www.imdb.com]
 match = 0.0%%
-title = Blue Bayou (2021)
-url = https://www.imdb.com/title/tt11121664/
+title = Green Book (2018)
+url = https://www.imdb.com/title/tt6966692/
 
 [www.boundless.com]
 match = -128.6%%
@@ -152,8 +152,8 @@ title =
 url = https://m.economictimes.com/news/international/us/blue-eye-samurai-season-2-check-out-what-we-know-about-release-date-plot-cast-and-more/articleshow/107438262.cms
 
 [www.medicalnewstoday.com]
-match = 0.0%%
-title = 
+match = -228.6%%
+title = Green tea: Health benefits, side effects, and research
 url = https://www.medicalnewstoday.com/articles/269538
 
 [bigwest.org]
@@ -272,9 +272,9 @@ title = Ronaldo con nho xanh
 url = https://bessolo.com/app8284128
 
 [m.facebook.com]
-match = -264.3%%
-title = Doomsday: Last Survivors - POV: You share a bad take in ...
-url = https://m.facebook.com/DoomsdayLastSurvivors/photos/pov-you-share-a-bad-take-in-chat-and-everyone-shoots-back-at-youhave-you-ever-ex/770796925210391/
+match = -242.9%%
+title = FIND A TRAVEL BUDDY | Hi everyone! I'm Neil from the ...
+url = https://m.facebook.com/groups/UTrippers/posts/1590041705058518/
 
 [www.ocregister.com]
 match = -257.1%%
