--- a/images/ruot-nem-korea-9f-18/config.ini
+++ b/images/ruot-nem-korea-9f-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ruot-nem-korea-9f-18.html
 lastopen = 2024-06-10 00:54:35
 
 [search]
-lastsearch = 2024-07-20 23:46:45
+lastsearch = 2024-07-21 01:15:38
 
 [en.wikipedia.org]
 match = 15.0%%
@@ -414,7 +414,7 @@ url = https://8tharmy.korea.army.mil/site/index.asp
 [www.google.com]
 match = 0.0%%
 title = 
-url = https://www.google.com/search?sca_esv=744f17077f1a8fb5&sca_upv=1&q=Was+Park+Chung+Hee+assassinated?&sa=X&ved=2ahUKEwj_k7ekg7aHAxXhDDQIHQu_BCkQsZYEegQIMRAC
+url = https://www.google.com/search?sca_esv=78666b2a3158a13b&q=Was+Park+Chung+Hee+assassinated?&sa=X&ved=2ahUKEwjOj9LknLaHAxV6ElkFHUQ7AjcQsZYEegQIVhAC
 
 [www.outlookindia.com]
 match = -170.0%%
