--- a/images/bo-chan-ga-goi-uc-cotton-16/config.ini
+++ b/images/bo-chan-ga-goi-uc-cotton-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-chan-ga-goi-uc-cotton-16.html
 lastopen = 2024-06-07 00:26:06
 
 [search]
-lastsearch = 2024-07-21 00:28:31
+lastsearch = 2024-07-21 01:33:35
 
 [changagoidemsonghong.com]
 match = 33.3%%
@@ -24,7 +24,7 @@ url = https://demviethong.com/chan-ga-goi-song-hong-uc16/
 [demxanh.com]
 match = 48.1%%
 title = Bộ ga gối hoạt hình Cotton CT16
-url = https://demxanh.com/bo-ga-goi-hoat-hinh-cotton-ct16.html
+url = https://demxanh.com/bo-ga-goi-hoat-hinh-cotton-ct16.html?srsltid=AfmBOoo-og7MHub8na2css_znM5crEs-FjsIXNn8GZZoOvXjpvFnjBvC
 
 [chanrathanhthuy.com]
 match = -90.9%%
@@ -124,7 +124,7 @@ url = https://cuahangchangagoidem.com/bo-chan-ga-goi-dem-cao-cap/
 [spacet.vn]
 match = -33.3%%
 title = Mua [BST 16] Bộ Chăn Ga Gối Cotton Poly Emmibedding ...
-url = https://spacet.vn/shop/bst-16-bo-chan-ga-goi-cotton-poly-emmibedding-phong-cach-han-quoc-drap-giuong-cotton-hot-trend-khong-kem-ruot-12467
+url = https://spacet.vn/shop/bst-16-bo-chan-ga-goi-cotton-poly-emmibedding-phong-cach-han-quoc-drap-giuong-cotton-hot-trend-khong-kem-ruot-12467?srsltid=AfmBOooD2RX00C62xVcmogwpl_kNj1HuukBKbqJMyY4dn1udC0K7lrEl
 
 [suongtuyet.com]
 match = 33.3%%
