--- a/images/ruot-nem-korea-140x190x09/config.ini
+++ b/images/ruot-nem-korea-140x190x09/config.ini
@@ -4,16 +4,16 @@ url = https://www.diepxuan.com/ruot-nem-korea-140x190x09.html
 lastopen = 2024-06-11 23:28:41
 
 [search]
-lastsearch = 2024-07-20 23:41:08
+lastsearch = 2024-07-21 01:34:49
 
 [www.riotgames.com]
-match = 0.0%%
-title = 
-url = https://www.riotgames.com/en/news/korea-cultural-heritage-protection-project
+match = -84.0%%
+title = Seoul, Korea - Riot Games Global Offices & Job Openings
+url = https://www.riotgames.com/en/work-with-us/offices/seoul
 
 [www.linkedin.com]
-match = -56.0%%
-title = How to get a job in Korea as a non-Korean (again)
+match = 0.0%%
+title = 
 url = https://www.linkedin.com/pulse/how-get-job-korea-non-korean-again-ross-harman
 
 [www.youtube.com]
