--- a/images/vo-goi-epm20065-45x65/config.ini
+++ b/images/vo-goi-epm20065-45x65/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/vo-goi-epm20065-45x65.html
 lastopen = 2024-07-07 18:08:23
 
 [search]
-lastsearch = 2024-07-20 21:33:37
+lastsearch = 2024-07-21 01:40:23
 
 [www.diepxuan.com]
-match = 23.8%%
-title = Điệp Xuân Vỏ gối EP1727 45x65
-url = https://www.diepxuan.com/vo-goi-ep1727-45x65.html
+match = -19.0%%
+title = Vỏ gối kê WarmDream 45x65 HQ - Điệp Xuân
+url = https://www.diepxuan.com/vo-goi-ke-warmdream-45x65-hq.html
 
 [tiki.vn]
 match = -81.0%%
