--- a/images/chan-hoi-dior/config.ini
+++ b/images/chan-hoi-dior/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chan-hoi-dior.html
 lastopen = 2024-06-09 23:37:49
 
 [search]
-lastsearch = 2024-07-21 01:17:58
+lastsearch = 2024-07-21 01:47:53
 
 [www.instagram.com]
-match = -169.2%%
-title = Embarking on a new journey, @Dior is set ...
-url = https://www.instagram.com/hashtag_legend/p/C0I6TiRv89q/
+match = -176.9%%
+title = HArris CHan | My first dior saddle bagggg. 🎅🏽🧝🏻 ...
+url = https://www.instagram.com/_harris_chan_/p/Cz3dzHtyRjX/
 
 [hk.linkedin.com]
 match = -100.0%%
@@ -302,7 +302,7 @@ title = Hoi Yi Chan's Reviews on Carousell Hong Kong
 url = https://www.carousell.sg/u/justforu.shop/reviews/
 
 [www.bbc.com]
-match = -230.8%%
-title = South Korea: First lady's Dior bag shakes ... - BBC
+match = -261.5%%
+title = South Korea: First lady's Dior bag shakes country's ...
 url = https://www.bbc.com/news/world-asia-68090638
 
