--- a/images/man-tu-bung-tre-em/config.ini
+++ b/images/man-tu-bung-tre-em/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-tu-bung-tre-em.html
 lastopen = 2024-06-07 00:52:30
 
 [search]
-lastsearch = 2024-07-20 21:12:59
+lastsearch = 2024-07-21 01:44:28
 
 [www.mantubung.com]
 match = -100.0%%
@@ -62,9 +62,9 @@ title = Mùng Tự Bung Cho Bé 70cm x 90Cm
 url = https://mungchup.com/mung-thuyen-tu-bung-cho-be-67008.html
 
 [munghoangphat.com]
-match = -88.9%%
-title = MÙNG NGỦ, MÙNG CHỤP TỰ BUNG CAO CẤP HOÀNG PHÁT
-url = https://munghoangphat.com/
+match = -44.4%%
+title = Mùng chụp tự bung trẻ em cao cấp HOÀNG PHÁT
+url = https://munghoangphat.com/mung-chup-tu-bung-tre-em-cao-cap.html
 
 [ichikobaby.com]
 match = -88.9%%
