--- a/images/tham-giuong-ii-160x200/config.ini
+++ b/images/tham-giuong-ii-160x200/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-giuong-ii-160x200.html
 lastopen = 2024-06-17 21:09:12
 
 [search]
-lastsearch = 2024-07-20 20:51:34
+lastsearch = 2024-07-21 01:47:21
 
 [www.diepxuan.com]
 match = 27.3%%
@@ -27,9 +27,9 @@ title = Ga trải giường chống thấm 160x200 - 131
 url = https://www.sendo.vn/ga-trai-giuong-chong-tham-160x200-17225304.html
 
 [tiki.vn]
-match = -72.7%%
-title = Mua Ga trải giường có chống thấm nhiều màu trơn - 160x200
-url = https://tiki.vn/ga-trai-giuong-co-chong-tham-nhieu-mau-tron-p107409030.html?spid=176507764/
+match = -36.4%%
+title = Thảm trải giường hàng chính hãng, giao nhanh
+url = https://tiki.vn/search?q=thảm trải giường
 
 [decoviet.vn]
 match = 22.2%%
