--- a/images/vo-goi-epm20065-45x65/config.ini
+++ b/images/vo-goi-epm20065-45x65/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/vo-goi-epm20065-45x65.html
 lastopen = 2024-07-07 18:08:23
 
 [search]
-lastsearch = 2024-07-21 01:40:23
+lastsearch = 2024-07-21 01:48:37
 
 [www.diepxuan.com]
-match = -19.0%%
-title = Vỏ gối kê WarmDream 45x65 HQ - Điệp Xuân
-url = https://www.diepxuan.com/vo-goi-ke-warmdream-45x65-hq.html
+match = 19.0%%
+title = Vỏ gối EP1727 45x65 - Điệp Xuân
+url = https://www.diepxuan.com/vo-goi-ep1727-45x65.html
 
 [tiki.vn]
 match = -81.0%%
@@ -22,8 +22,8 @@ title = Giảm giá Vỏ gối 45x65 EVERON chính hãng thêu dây leo ...
 url = https://muathongminh.vn/vo-goi-everon-45-x-65-cm-ko-kem-ruot-p.1__3862161698__114265811
 
 [www.everonqb.com]
-match = -47.6%%
-title = Everon Quảng Bình Vỏ gối ôm ESB23022 80x100
+match = -104.8%%
+title = Vỏ gối ôm ESB23022 80x100 - Everon Quảng Bình Trang Chủ
 url = https://www.everonqb.com/vo-goi-om-esb23022-80x100.html
 
 [mho.vn]
