--- a/images/chan-5-kg-kq-song/config.ini
+++ b/images/chan-5-kg-kq-song/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chan-5-kg-kq-song.html
 lastopen = 2024-06-09 23:17:50
 
 [search]
-lastsearch = 2024-07-20 19:57:27
+lastsearch = 2024-07-21 02:13:00
 
 [en.wikipedia.org]
 match = -16.7%%
@@ -34,7 +34,7 @@ url = https://www.ncbi.nlm.nih.gov/pmc/articles/PMC9317998/
 [books.google.com]
 match = -11.8%%
 title = Cumulated Index Medicus
-url = https://books.google.com/books?id=KlBiDKi_dngC&pg=PA5960&lpg=PA5960&dq=chan+5+kg+kq+song&source=bl&ots=BOWVHOXvZd&sig=ACfU3U3t7PlCGvjuziFkY3yoFYW2YkPX4A&hl=en&sa=X&ved=2ahUKEwif6L3KtrWHAxUcMlkFHZ_SDzcQ6AF6BAgbEAM
+url = https://books.google.com/books?id=KlBiDKi_dngC&pg=PA5960&lpg=PA5960&dq=chan+5+kg+kq+song&source=bl&ots=BOWVIHYt5a&sig=ACfU3U39eDE1BAEW2Jk-Lv4FyPQyXUsLSA&hl=en&sa=X&ved=2ahUKEwjw2uXNqbaHAxWuEVkFHayYBDkQ6AF6BAgaEAM
 
 [www.ateezstoryline.com]
 match = 0.0%%
