--- a/images/ga-ni-long-18/config.ini
+++ b/images/ga-ni-long-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ga-ni-long-18.html
 lastopen = 2024-06-09 23:39:01
 
 [search]
-lastsearch = 2024-07-20 23:46:00
+lastsearch = 2024-07-21 02:15:14
 
 [www.zillow.com]
 match = -69.2%%
@@ -307,8 +307,8 @@ title = USA Swimming
 url = https://www.usaswimming.org/
 
 [www.tcsg.edu]
-match = 0.0%%
-title = 
+match = -161.5%%
+title = Technical College System of Georgia: TCSG
 url = https://www.tcsg.edu/
 
 [pubmed.ncbi.nlm.nih.gov]
