--- a/images/tham-chan-len-xu-1-40x60/config.ini
+++ b/images/tham-chan-len-xu-1-40x60/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/tham-chan-len-xu-1-40x60.html
 lastopen = 2024-06-07 00:36:02
 
 [search]
-lastsearch = 2024-07-21 00:34:37
+lastsearch = 2024-07-21 02:09:44
 
 [shopee.vn]
-match = -75.0%%
-title = Thảm lau chân chùi chân chống trượt thấm nước nhà bếp ...
-url = https://shopee.vn/Thảm-lau-chân-chùi-chân-chống-trượt-thấm-nước-nhà-bếp-nhà-tắm-phòng-khách-giẻ-lau-chân-đế-chống-trượt-i.149656288.21351545391
+match = -8.3%%
+title = Thảm lau chân LEN MỊN thấm hút tốt size 40x60 cm
+url = https://shopee.vn/Thảm-lau-chân-LEN-MỊN-thấm-hút-tốt-size-40x60-cm-i.978766629.25771125475
 
 [lepetit.com.vn]
 match = -66.7%%
-title = Thảm lau chân lông xù màu trơn thấm nước, chống trượt ...
-url = https://lepetit.com.vn/tham-long-xu-chu-nhat-ma-u-tron-tham-nuoc-chong-truot-40x60-cm
+title = Thảm lau chân lông xù hình học thấm nước, chống trượt ...
+url = https://lepetit.com.vn/tham-long-xu-chu-nha-t-ke-hi-nh-tha-m-nuo-c-cho-ng-truo-t-40x60-cm
 
 [tiki.vn]
 match = -54.2%%
@@ -47,9 +47,9 @@ title = Thảm chân len xù 1 40x60
 url = https://www.diepxuan.com/tham-chan-len-xu-1-40x60.html
 
 [www.lazada.vn]
-match = -62.5%%
-title = Thảm chân logo hình bàn chân, Thảm chùi chân lông xù ...
-url = https://www.lazada.vn/products/tham-chan-logo-hinh-ban-chan-tham-chui-chan-long-xu-cao-cap-tham-lau-chan-sieu-tham-nuoc-tham-chui-chan-chong-tron-truot-trang-tri-nha-cua-phong-ngu-phong-khach-kich-thuoc-40x60-cm-i1788111707.html
+match = -70.8%%
+title = Thảm chùi chân,LEN MỊN thảm lau chân chống trơn trượt ...
+url = https://www.lazada.vn/products/tham-chui-chanlen-min-tham-lau-chan-chong-tron-truot-hang-cao-cap-mau-moi-40-60cm-i1342643160.html
 
 [megahomevietnam.com]
 match = 20.0%%
