--- a/images/chieu-truc-cong-ty-14/config.ini
+++ b/images/chieu-truc-cong-ty-14/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-truc-cong-ty-14.html
 lastopen = 2024-06-09 23:39:55
 
 [search]
-lastsearch = 2024-07-21 01:37:00
+lastsearch = 2024-07-21 02:28:57
 
 [chieutrucsaigon.com]
 match = 0.0%%
-title = CHIẾU TRÚC SẢN PHẨM ĐỘC ĐÁO ĐA DẠNG
-url = https://chieutrucsaigon.com/tin-tuc/tin-tuc-moi/chieu-truc-san-pham-doc-dao-da-dang-40.html
+title = CHIẾU TRÚC HẠT VÀNG HƯƠNG TRÚC 1.4M X 2M
+url = https://chieutrucsaigon.com/chieu-truc-hat-vang-huong-truc-1m4x2m.html
 
 [chieutrelanlan.com]
 match = -76.2%%
@@ -17,9 +17,9 @@ title = Chiếu trúc mắt nhỏ không viền màu trắng 160x190cm (1m6)
 url = https://chieutrelanlan.com/chieu-truc-mat-nho-loai-khong-vien-mau-trang-160x190cm-14.html
 
 [nemsaithanh.com]
-match = 57.9%%
-title = Chiếu Trúc Các Loại
-url = https://nemsaithanh.com/chieu-truc-cac-loai/
+match = -10.0%%
+title = Chiếu Trúc
+url = https://nemsaithanh.com/chieu-truc/chieu-truc/
 
 [trangvangvietnam.com]
 match = -61.9%%
@@ -42,9 +42,9 @@ title = Phân phối chiếu trúc Việt Nam giá rẻ tại Hà Nội
 url = https://thegioichieutruc.com/
 
 [www.facebook.com]
-match = 50.0%%
-title = CHIẾU TRÚC | Hanoi
-url = https://www.facebook.com/chieutrucviet/?locale=vi_VN
+match = -9.5%%
+title = CHIẾU TRE GIÁ RẺ | Ho Chi Minh City
+url = https://www.facebook.com/chieutregiare/?locale=vi_VN
 
 [chieutruccaobang.com.vn]
 match = 57.9%%
