--- a/images/ga-chun-thang-loi-180x200/config.ini
+++ b/images/ga-chun-thang-loi-180x200/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ga-chun-thang-loi-180x200.html
 lastopen = 2024-06-06 16:41:04
 
 [search]
-lastsearch = 2024-07-20 23:40:43
+lastsearch = 2024-07-21 02:29:52
 
 [maythangloi.com.vn]
 match = -77.8%%
@@ -42,9 +42,9 @@ title = Ga chun tiện lợi và thoáng mát, chính hãng giảm 15%%
 url = https://nemhana.com/ga-chun/
 
 [demxanh.com]
-match = 0.0%%
-title = Bộ ga chun Cotton chống thấm màu xám đậm
-url = https://demxanh.com/bo-ga-chun-cotton-chong-tham-mau-xam-dam.html
+match = -8.0%%
+title = Bộ ga chun Cotton chống thấm màu xanh nhạt
+url = https://demxanh.com/bo-ga-chun-cotton-chong-tham-mau-xanh-nhat.html
 
 [www.lazada.vn]
 match = 0.0%%
