--- a/images/man-re-trang-10/config.ini
+++ b/images/man-re-trang-10/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-re-trang-10.html
 lastopen = 2024-06-07 00:52:54
 
 [search]
-lastsearch = 2024-07-20 14:17:07
+lastsearch = 2024-07-21 02:32:49
 
 [burningman.org]
 match = 0.0%%
@@ -12,9 +12,9 @@ title =
 url = https://burningman.org/about/10-principles/
 
 [www.youtube.com]
-match = -126.7%%
-title = Rex Orange County - 10/10 (Official Video)
-url = https://www.youtube.com/watch?v=TozTL-MJCB8
+match = 0.0%%
+title = Primitive Technology
+url = https://www.youtube.com/@primitivetechnology9550
 
 [www.hcso.org]
 match = 7.7%%
@@ -29,7 +29,7 @@ url = http://desaulnier.house.gov/
 [account.microsoft.com]
 match = -226.7%%
 title = Microsoft account | Sign In or Create Your Account Today ...
-url = https://account.microsoft.com/account
+url = https://account.microsoft.com/account/Account
 
 [www.regmovies.com]
 match = -113.3%%
