--- a/images/tham-ghe-1m7roi/config.ini
+++ b/images/tham-ghe-1m7roi/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-ghe-1m7roi.html
 lastopen = 2024-06-07 00:15:10
 
 [search]
-lastsearch = 2024-07-21 00:37:01
+lastsearch = 2024-07-21 02:28:34
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -12,9 +12,9 @@ title = thảm ghế 1m7rời
 url = https://www.diepxuan.com/tham-ghe-1m7roi.html
 
 [www.facebook.com]
-match = -220.0%%
-title = Không Sợ Chó - Con gái cao trên 1m7, cảm giác thế nào?...
-url = https://www.facebook.com/khongsocho.official/posts/con-gái-cao-trên-1m7-cảm-giác-thế-nào_____1-không-được-phép-béo-lên-béo-một-phát/2307273079557040/
+match = -213.3%%
+title = Mai Ngô đến trễ 2 tiếng ở sơ khảo Hoa hậu Hòa bình ...
+url = https://www.facebook.com/photo.php?fbid=645364180290734&id=100044514726115&set=a.588659265961226&locale=vi_VN
 
 [voz.vn]
 match = -233.3%%
@@ -27,8 +27,8 @@ title = Con Gái Cao 1m7 Vứt
 url = https://www.tiktok.com/discover/con-gái-cao-1m7-vứt
 
 [www.reddit.com]
-match = -120.0%%
-title = Chiều cao 1m80 trên thế giới : r/vozforums
+match = -33.3%%
+title = Chiều cao 1m80 trên thế giới
 url = https://www.reddit.com/r/vozforums/comments/xcdoeo/chiều_cao_1m80_trên_thế_giới/
 
 [mysofa.vn]
