--- a/images/tham-giuong-ii-160x200/config.ini
+++ b/images/tham-giuong-ii-160x200/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tham-giuong-ii-160x200.html
 lastopen = 2024-06-17 21:09:12
 
 [search]
-lastsearch = 2024-07-21 02:13:56
+lastsearch = 2024-07-21 02:28:23
 
 [www.diepxuan.com]
-match = 27.3%%
-title = Thảm giường Bode 160x200 - Điệp Xuân
-url = https://www.diepxuan.com/tham-giuong-bode-160x200.html
+match = 40.9%%
+title = Thảm giường nỉ 160x200 - Điệp Xuân
+url = https://www.diepxuan.com/tham-giuong-ni-160x200.html
 
 [demxanh.com]
 match = -22.7%%
@@ -107,9 +107,9 @@ title = Thảm giường massage cotton hữu cơ Maybedding
 url = https://maybedding.vn/products/tham-giuong-massage-cotton-huu-co-maybedding
 
 [dovihome.vn]
-match = -118.2%%
-title = Giường ngủ Decor có tựa đầu bọc nệm Sofa phong cách ...
-url = https://dovihome.vn/giuong-bay-ma-m30-giuong-ngu-decor-co-tua-dau-boc-nem-sofa-phong-cach-toi-gian
+match = -122.7%%
+title = Giường ngủ Decor kết hợp mây mắt cáo từ gỗ thông nhập ...
+url = https://dovihome.vn/giuong-ma-dv6-giuong-ngu-decor-ket-hop-may-mat-cao-tu-go-thong-nhap-khau
 
 [covacu.com]
 match = 28.6%%
