--- a/images/vo-goi-vuong-uc/config.ini
+++ b/images/vo-goi-vuong-uc/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/vo-goi-vuong-uc.html
 lastopen = 2024-06-06 16:45:20
 
 [search]
-lastsearch = 2024-07-21 00:47:49
+lastsearch = 2024-07-21 02:29:09
 
 [www.lazada.vn]
 match = -26.7%%
@@ -12,9 +12,9 @@ title = Vỏ Gối ôm Vuông Giá Tốt T04/2024
 url = https://www.lazada.vn/tag/vo-goi-om-vuong/
 
 [shopee.vn]
-match = -140.0%%
-title = Rẻ Vô Địch Gối vuông tựa trang trí ( Gồm vỏ + ruột
-url = https://shopee.vn/Rẻ-Vô-Địch-Gối-vuông-tựa-trang-trí-(-Gồm-vỏ-ruột-Giá-tại-xưởng)-i.18055727.785277066
+match = -166.7%%
+title = Vỏ Gối Tựa Vuông, Gối Tựa Sofa, Gối Tựa Lưng Nhung ...
+url = https://shopee.vn/Vỏ-Gối-Tựa-Vuông-Gối-Tựa-Sofa-Gối-Tựa-Lưng-Nhung-Trơn-2-Mặt-Siêu-Bền-i.29215914.10516331485
 
 [jysk.vn]
 match = -166.7%%
