CI images update

--- a/images/bo-bon-mua-chun-chan-182m/config.ini
+++ b/images/bo-bon-mua-chun-chan-182m/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/bo-bon-mua-chun-chan-182m.html
 lastopen = 2024-06-07 00:25:46
 
 [search]
-lastsearch = 2024-07-21 02:32:35
+lastsearch = 2024-07-21 02:46:38
 
 [everon.online]
-match = -12.0%%
-title = Bộ Chăn Ga Gối Bốn Mùa Everon ESM21012 ...
-url = https://everon.online/products/bo-chan-ga-bon-mua-everon-esm21012
+match = -32.0%%
+title = Chăn bốn mùa Everon chính hãng - Giảm giá tốt nhất
+url = https://everon.online/collections/chan-bon-mua-everon
 
 [everonchinhhang.vn]
 match = -32.0%%
@@ -17,9 +17,9 @@ title = Bộ chăn bốn mùa Dòng Thời Gian - EPT24081 - Everon
 url = https://everonchinhhang.vn/products/bo-chan-bon-mua-dong-thoi-gian-ept24081
 
 [everonvn.com.vn]
-match = 28.0%%
-title = Báo giá chăn 4 mùa Everon
-url = https://everonvn.com.vn/everon/582/chan-bon-mua-everon
+match = -8.0%%
+title = Chăn bốn mùa Everon Es-1802 giảm giá 40%%
+url = https://everonvn.com.vn/everon/2393/chan-bon-mua-es-1802
 
 [www.changagoidemeveron.vn]
 match = -8.0%%
@@ -32,9 +32,9 @@ title = Bộ Ga Chun Chần Bốn Mùa Freesia
 url = https://tongdailyeveron.com.vn/products/nhan-ban-tu-bo-ga-chun-chan-bon-mua-vintage-rose
 
 [everonminhkhai.com]
-match = -6.7%%
-title = Bộ chăn bốn mùa
-url = https://everonminhkhai.com/product-category/chan-ga-goi/bo-chan-ga/bo-chan-bon-mua/
+match = -58.3%%
+title = Chăn bốn mùa
+url = https://everonminhkhai.com/product-category/chan-ga-goi/san-pham-chan/chan-bon-mua/
 
 [vhds.baothanhhoa.vn]
 match = -16.0
@@ -137,9 +137,9 @@ title = trực tiếp bóng chuyền việt nam nữ ‍ 【WW88.Game】Đăng .
 url = http://www.tuyensinh.dau.edu.vn/trực-tiếp-bóng-chuyền-việt-nam-nữ.phtm
 
 [shopee.vn]
-match = -16.0%%
-title = Bộ ga chun chần chăn bốn mùa vỏ gối EPM24067
-url = https://shopee.vn/Bộ-ga-chun-chần-chăn-bốn-mùa-vỏ-gối-EPM24067-i.7352455.20292185884
+match = -28.0%%
+title = Bộ chăn 4 mùa, bộ ga chun chần es1840 160*200, 180 ...
+url = https://shopee.vn/Bộ-chăn-4-mùa-bộ-ga-chun-chần-es1840-160*200-180*200-thanh-lý-i.40934475.2002344916
 
 [tintuconline.com.vn]
 match = -88.0%%
