--- a/images/chieu-gap-dai-loan-14/config.ini
+++ b/images/chieu-gap-dai-loan-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-gap-dai-loan-14.html
 lastopen = 2024-06-09 22:43:30
 
 [search]
-lastsearch = 2024-07-21 02:24:47
+lastsearch = 2024-07-21 02:50:20
 
 [www.diepxuan.com]
 match = 14.3%%
@@ -22,9 +22,9 @@ title = THỦ TỤC LÀM HỘ CHIẾU ĐÀI LOAN VÀ VISA NHẬP CẢN...
 url = https://roc-taiwan.org/vnsgn_en/post/79.html
 
 [shopee.vn]
-match = -57.1%%
-title = Chiếu cói tự nhiên kiểu gập đôi cao cấp Đài Loan.
-url = https://shopee.vn/Chiếu-cói-tự-nhiên-kiểu-gập-đôi-cao-cấp-Đài-Loan.-i.17414239.5745968545
+match = -42.9%%
+title = BẢN LỀ GẬP THÔNG MINH ĐÀI LOAN CHỊU LỰC 80KG
+url = https://shopee.vn/BẢN-LỀ-GẬP-THÔNG-MINH-ĐÀI-LOAN-CHỊU-LỰC-80KG-LOẠI-CAO-CẤP-INOX-BẢN-DÀY-CHẮC-CHẮN-GIÁ-ĐỠ-GẤP-BÀN-TREO-TƯỜNG-XẾP-GỌN-i.120824980.3158643972
 
 [www.taiwanembassy.org]
 match = -19.0%%
@@ -42,9 +42,9 @@ title = Hướng Dẫn Đổi Hộ Chiếu Cho Người Việt Nam Ở Đài ...
 url = https://taiwandiary.vn/2023/02/27/huong-dan-doi-ho-chieu-cho-nguoi-viet-nam-o-dai-loan-moi-nhat/
 
 [www.roc-taiwan.org]
-match = -57.1%%
-title = thủ tục làm hộ chiếu đài loan và visa nhập cảnh
-url = https://www.roc-taiwan.org/uploads/sites/233/2021/06/huong-dan-q1.pdf
+match = -19.0%%
+title = THỦ TỤC XIN CẤP ĐỔI HỘ CHIẾU ĐÀI LOAN
+url = https://www.roc-taiwan.org/vnsgn_vi/post/91.html
 
 [www.facebook.com]
 match = -23.8%%
@@ -137,9 +137,9 @@ title = Giờ chiếu rạp ở Đài Loan｜Miễn phí vận chuyển đến .
 url = https://www.kkday.com/vi/product/134232
 
 [m.facebook.com]
-match = -52.4%%
-title = Ăn chơi Đài Loan 台灣 - 去哪吃啥?
-url = https://m.facebook.com/groups/anchoidailoan/posts/298860637491074/
+match = -95.2%%
+title = Sau 4 ngày công chiếu tại Đài Loan, Thanh Xuân 18x2: Lữ ...
+url = https://m.facebook.com/cgvcinemavietnam/photos/sau-4-ngày-công-chiếu-tại-đài-loan-thanh-xuân-18x2-lữ-trình-hướng-về-em-đứng-top/844924327674339/
 
 [znews.vn]
 match = -119.0%%
