--- a/images/chieu-lac-soc-18/config.ini
+++ b/images/chieu-lac-soc-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-soc-18.html
 lastopen = 2024-06-06 16:53:55
 
 [search]
-lastsearch = 2024-07-20 22:31:37
+lastsearch = 2024-07-21 02:45:11
 
 [scholar.google.com]
 match = -43.8%%
@@ -222,9 +222,9 @@ title = Chuyển phát nhanh Phương Trang ...
 url = https://futaexpress.vn/chi-nhanh
 
 [baolongan.vn]
-match = -31.2%%
-title = Giữ nghề dệt chiếu Long Cang
-url = https://baolongan.vn/giu-nghe-det-chieu-long-cang-a169502.html
+match = -125.0%%
+title = Một ngày ở làng dệt chiếu lác Long Cang, Cần Đước
+url = https://baolongan.vn/mot-ngay-o-lang-det-chieu-lac-long-cang-can-duoc-a5230.html
 
 [baothuathienhue.vn]
 match = -200.0%%
@@ -510,4 +510,9 @@ url = https://vinhphuc.gov.vn/ct/cms/thongbao/Lists/ThongBao/View_Detail.aspx?It
 match = 6.2%%
 title = Tình anh bán chiếu
 url = https://www.qdnd.vn/van-hoa/van-hoc-nghe-thuat/tinh-anh-ban-chieu-592647
+
+[vovgiaothong.vn]
+match = -193.8%%
+title = Thông cáo đặc biệt về Lễ tang Tổng Bí thư Nguyễn Phú ...
+url = https://vovgiaothong.vn/newsaudio/thong-cao-dac-biet-ve-le-tang-tong-bi-thu-nguyen-phu-trong-d39880.html
 
