--- a/images/nem-everon-180x200x15-extrafoam/config.ini
+++ b/images/nem-everon-180x200x15-extrafoam/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/nem-everon-180x200x15-extrafoam.html
 lastopen = 2024-06-06 17:10:38
 
 [search]
-lastsearch = 2024-07-21 01:37:56
+lastsearch = 2024-07-21 02:44:40
 
 [www.everonvn.vn]
-match = -22.6%%
-title = Bảng giá đệm bông ép Everon 1m8 (1.8m hay 180 x 200)
-url = https://www.everonvn.vn/chi-tiet/dem-bong-ep-everon-1m8.html
+match = -38.7%%
+title = Bảng giá các kích thước đệm bông ép Everon vỏ gấm ...
+url = https://www.everonvn.vn/chi-tiet/dem-bong-ep-everon-vo-gam.html
 
 [nemgiakho.com]
 match = 54.8%%
@@ -115,4 +115,9 @@ url = https://thegioidembongep.com/dem-bong-ep-everon-extrafoam/
 match = 42.9%%
 title = Đệm bông ép Everon EXTRAFOAM
 url = https://changagoidemdep.vn/dem-bong-ep-everon-extrafoam.html
+
+[everonkorea.com]
+match = 12.9%%
+title = Chăn ga gối đệm Everon - Hà Nội
+url = https://everonkorea.com/everon/
 
