CI images update

--- a/images/tham-giuong-loai-1-14/config.ini
+++ b/images/tham-giuong-loai-1-14/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tham-giuong-loai-1-14.html
 lastopen = 2024-06-07 00:36:45
 
 [search]
-lastsearch = 2024-07-21 01:35:20
+lastsearch = 2024-07-21 03:18:14
 
 [bilystore.vn]
-match = -95.2%%
-title = Thảm trải sàn phòng ngủ - Bilystore thảm trải sàn cao cấp
-url = https://bilystore.vn/tham-trai-san-phong-ngu/
+match = -81.0%%
+title = Thảm phòng ngủ NA14 - Bilystore thảm trải sàn cao cấp
+url = https://bilystore.vn/tham-phong-ngu-na14/
 
 [shopee.vn]
 match = -52.4%%
@@ -190,4 +190,9 @@ url = https://noithatdogoviet.com/giuong-ngu
 match = -81.0%%
 title = Giường Ngủ Bọc Nệm Cao Cấp Eadric - 14 | SMLIFE.vn
 url = https://smlife.vn/giuong-ngu-go-tu-nhien-eadric-14
+
+[dienmaycholon.com]
+match = -95.2%%
+title = Giường 1.8M NOVARA L14Z-NZ Đen giá rẻ, giao ngay
+url = https://dienmaycholon.com/giuong/giuong-18m-novara-l14znz-den
 
