CI images update

--- a/images/chieu-cay-cao-bang-a-18/config.ini
+++ b/images/chieu-cay-cao-bang-a-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-cao-bang-a-18.html
 lastopen = 2024-06-09 23:45:38
 
 [search]
-lastsearch = 2024-07-21 03:14:33
+lastsearch = 2024-07-21 03:28:45
 
 [chieutruc.info]
 match = -73.9%%
@@ -54,7 +54,7 @@ url = https://www.facebook.com/chieucaobang/
 [chieu.com.vn]
 match = 52.6%%
 title = Chiếu Trúc Cao Bằng
-url = http://chieu.com.vn/chieu-truc/chieu-truc-cao-bang
+url = https://chieu.com.vn/chieu-truc/chieu-truc-cao-bang
 
 [www.youtube.com]
 match = -126.1%%
@@ -118,8 +118,8 @@ url = https://thep.hoaphat.com.vn/tin-cong-nghe/cay-sat-phi-18-nang-bao-nhieu-kg
 
 [olm.vn]
 match = -95.7%%
-title = mot thua ruong hinh binh hanh co so do canh day 120m va ...
-url = https://olm.vn/cau-hoi/mot-thua-ruong-hinh-binh-hanh-co-so-do-canh-day-120m-va-chieu-cao-bang-34-canh-day-nguoi-ta-cay-tren-thua-ruong-do-cu-500m2-thu-duoc-1250-kg-lua-h.101527397203
+title = 1) 1 thua vuon HThang co day lon la 180m, day be bang 3/ ...
+url = https://olm.vn/hoi-dap/tim-kiem?id=103358625587&q=1) 1 thua vuon HThang co day lon la 180m, day be bang 3/5 day lon, chieu cao bang 2/3 day be. Nguoi ta trong nhan o trong khu dat, cu 100m2 thi trong duoc 24 cay. Hoi ca khu vuon trong duoc bao nhieu...
 
 [caobang.gov.vn]
 match = -13.0%%
@@ -130,4 +130,9 @@ url = https://caobang.gov.vn/viet-nam-dat-nuoc-con-nguoi/doc-dao-cac-san-pham-tu
 match = 56.5%%
 title = Chiếu trúc Cao Bằng 1m8x2m
 url = https://thegioidemtot.vn/dt17840-chie-u-tru-c-cao-ba-ng-1m8x2m.html
+
+[sovhtt.caobang.gov.vn]
+match = -113.0%%
+title = Báo cáo về việc điều chỉnh cục bộ Đồ án điều chỉnh Quy hoạch ...
+url = https://sovhtt.caobang.gov.vn/Default.aspx?sid=1355&pageid=34288&catid=94914&id=858488&catname=quy-hoach-phuong-xa&title=bao-cao-ve-viec-dieu-chinh-cuc-bo-do-an-dieu-chinh-quy-hoach-chung-thi-tran-pac-miau-huyen-bao-l
 
