--- a/images/bo-ga-goi-chun-xoa-18/config.ini
+++ b/images/bo-ga-goi-chun-xoa-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-ga-goi-chun-xoa-18.html
 lastopen = 2024-06-09 23:12:50
 
 [search]
-lastsearch = 2024-07-20 21:51:34
+lastsearch = 2024-07-21 03:34:40
 
 [hanvico.com.vn]
 match = 38.1%%
@@ -32,9 +32,9 @@ title = Bộ chăn ga gối Sông Hồng H16045 ga chun
 url = https://demsonghonghanoi.com/bo-chan-ga-goi-song-hong-h16045-ga-chun/
 
 [songhong.info]
-match = -85.7%%
-title = Nơi cung cấp chăn gối Sông Hồng mã H18-056 chính hiệu!
-url = https://songhong.info/chan-ga-goi-home-h18-056
+match = -71.4%%
+title = Chăn ga gối mã DN18-05 vải MicroSH khuyến mại -50%%
+url = https://songhong.info/chan-ga-goi-micro-dn1805
 
 [www.diepxuan.com]
 match = -81.0%%
