--- a/images/chieu-lac-gam-16/config.ini
+++ b/images/chieu-lac-gam-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-gam-16.html
 lastopen = 2024-06-09 23:10:09
 
 [search]
-lastsearch = 2024-07-21 00:18:10
+lastsearch = 2024-07-21 03:27:28
 
 [www.diepxuan.com]
 match = 22.2%%
@@ -17,9 +17,9 @@ title = Chiếu lác thiên nhiên : 1m6 .1m8
 url = https://shopee.vn/Chiếu-lác-thiên-nhiên-1m6-.1m8-i.154866392.2623269681
 
 [www.youtube.com]
-match = -231.2%%
-title = Thời sự sáng 20/7: Tổng bí thư Nguyễn Phú Trọng - Nhà lãnh ...
-url = https://www.youtube.com/watch?v=94lvutN9mUA
+match = -106.2%%
+title = EM TÌNH CHÀO CẢ NHÀ 0383456504 TRƯA 20/7
+url = https://www.youtube.com/watch?v=E0QTdYhqmrU
 
 [hawater.com.vn]
 match = -75.0%%
