--- a/images/goi-vuong-dreamland-45x45/config.ini
+++ b/images/goi-vuong-dreamland-45x45/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/goi-vuong-dreamland-45x45.html
 lastopen = 2024-06-06 16:45:16
 
 [search]
-lastsearch = 2024-07-21 03:12:34
+lastsearch = 2024-07-21 03:34:51
 
 [dreamland.vn]
 match = -64.0%%
@@ -27,9 +27,9 @@ title = 2024 今年もお盆になりました
 url = http://unicom.mx/micrositios.aspx?i=https://xn--18-6kcaa2cmqgaegdjggepph9yh.xn--p1ai/5178924fe80y
 
 [newsin.ir]
-match = -96.0%%
-title = Lk baden radiologie Cinepolis cartelera ensenada Sigcorp ...
-url = https://newsin.ir/fa/frame.html?href=https://dsrpo.ru/2163975kpdf50j119der88fbsmobi4fe80y
+match = -116.0%%
+title = Healthline nz jobs 1 5 mérföld hány km مواعيد محلات مول مصر في ...
+url = https://newsin.ir/fa/?option=com_roojanews&view=frame&href=https://xn-----7kcbchbkox0ag5apb3asrb4o.xn--p1ai/oTdAvh6fepr
 
 [shopee.vn]
 match = 56.0%%
