--- a/images/tui-warmdream-15/config.ini
+++ b/images/tui-warmdream-15/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tui-warmdream-15.html
 lastopen = 2024-06-10 00:24:28
 
 [search]
-lastsearch = 2024-07-20 23:50:13
+lastsearch = 2024-07-21 03:32:08
 
 [www.lazada.vn]
 match = -268.8%%
@@ -12,9 +12,9 @@ title = 【Hàng gia dụng dida】 dán xốp dán tường, Tự dính, 3D, kh
 url = https://www.lazada.vn/products/hang-gia-dung-dida-dan-xop-dan-tuong-tu-dinh-3d-khong-tham-nuoc-23-m-de-trang-tri-tuong-nha-i2583516490.html
 
 [shopee.vn]
-match = -212.5%%
-title = Trò chơi thẻ để bàn Dream Sleepwalker Tacaro Witt Series ...
-url = https://shopee.vn/Trò-chơi-thẻ-để-bàn-Dream-Sleepwalker-Tacaro-Witt-Series-Warm-Dream-10.6-*-6.2-Phiên-bản-chính-hãng-i.992098593.28954099934
+match = -206.2%%
+title = Túi Đựng Bút Hình Xe Tăng Sức Chứa Lớn Tiện Dụng Cho ...
+url = https://shopee.vn/Túi-Đựng-Bút-Hình-Xe-Tăng-Sức-Chứa-Lớn-Tiện-Dụng-Cho-Học-Sinh-i.600986218.23171442783
 
 [noveltoon.vn]
 match = -100.0%%
@@ -62,9 +62,9 @@ title = Sparky - Chapter 22 - BelleBasBleue - Avatar
 url = https://archiveofourown.org/works/30860870/chapters/87508054
 
 [osnat.bandcamp.com]
-match = -225.0%%
-title = Ave Maria אדון הסליחות - בזמן אחר - אסנת הראל | Osnat Harel
-url = https://osnat.bandcamp.com/track/ave-maria
+match = -81.2%%
+title = בזמן אחר - אסנת הראל | Osnat Harel
+url = https://osnat.bandcamp.com/album/-
 
 [demxanh.com]
 match = -181.2%%
@@ -195,4 +195,9 @@ url = http://mastersender.ru/index3.php?name=https://xn--b1aecnalzhcpg.xn--p1ai/
 match = -37.5%%
 title = TEMP CONTROL COVER KIT TUI-15
 url = https://bevequip.com/shop/991621-temp-control-cover-kit-tui-15-96481
+
+[www.lebguide.com]
+match = -218.8%%
+title = Furniture by design milano centre dropleaf ext table light oak
+url = http://www.lebguide.com/lebanon/hotels/redir.asp?link=https://xn--d1aby8ac.xn--p1ai/91753246npojh98msd4cfdv4fe36a
 
