--- a/images/chieu-nhua-ha-noi-gia-thai-2m/config.ini
+++ b/images/chieu-nhua-ha-noi-gia-thai-2m/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-nhua-ha-noi-gia-thai-2m.html
 lastopen = 2024-06-09 23:51:45
 
 [search]
-lastsearch = 2024-07-21 00:36:08
+lastsearch = 2024-07-21 03:44:32
 
 [shopee.vn]
-match = -17.2%%
-title = Chiếu nhựa thái hàng loại1 1,6m×2m 1,8×2m 2m×3m 2m × ...
-url = https://shopee.vn/Chiếu-nhựa-thái-hàng-loại1-1-6m×2m-1-8×2m-2m×3m-2m-×4m-i.422461343.3989921731
+match = -13.8%%
+title = Chiếu nhựa thái lan ăn cơm điều hoà gấp gọn đủ cỡ 2m ...
+url = https://shopee.vn/Chiếu-nhựa-thái-lan-ăn-cơm-điều-hoà-gấp-gọn-đủ-cỡ-2m-3m-4m-i.13406575.655918786
 
 [www.maihuyencorp.com]
 match = 13.8%%
@@ -29,12 +29,12 @@ url = https://tiki.vn/search?q=chiếu nhựa việt nam 2mx4m
 [www.facebook.com]
 match = 26.3%%
 title = Chiếu Nhựa Thái Lan
-url = https://www.facebook.com/chieunhuathailan/?locale=vi_VN
+url = https://www.facebook.com/chieunhuathailan/
 
 [www.sendo.vn]
-match = -3.4%%
-title = Chiếu Nhựa 1M2 Hàng Xịn, Rẻ Nhất, Thanh Toán Khi Nhận
-url = https://www.sendo.vn/chieu-nhua-1m2.htm
+match = 0.0%%
+title = Chiếu Nhựa Thái Lan Hàng Xịn, Giá Xuất Xưởng, Với ...
+url = https://www.sendo.vn/chieu-nhua-thai-lan.htm
 
 [chieuvietbac.blogspot.com]
 match = -20.7%%
