--- a/images/chieu-lac-d2-16/config.ini
+++ b/images/chieu-lac-d2-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-d2-16.html
 lastopen = 2024-06-06 16:54:08
 
 [search]
-lastsearch = 2024-07-21 02:46:07
+lastsearch = 2024-07-21 05:12:06
 
 [vinatools.com]
 match = -140.0%%
@@ -22,9 +22,9 @@ title = Hướng dẫn đi lại tại sân bay Nội Bài
 url = https://noibaiairport.vn/Transportation-to-and-from-Noibai-International-Airport-nid260.html
 
 [batdongsan.com.vn]
-match = -226.7%%
-title = ban nha duong pham van chieu phuong 16 go vap - Bán - tags
-url = https://batdongsan.com.vn/tags/ban/ban-nha-duong-pham-van-chieu-phuong-16-go-vap?price=7&areas=7
+match = -213.3%%
+title = Bán đất Himlam Lương Định Của, P. An Khánh Q2, MT D2 ...
+url = https://batdongsan.com.vn/ban-dat-duong-d2-phuong-an-khanh/b-himlam-luong-dinh-cua-p-khh-q2-mt-16m-4x23-15-8ty-0906997966-pr34187773
 
 [m.facebook.com]
 match = -193.3%%
@@ -47,9 +47,9 @@ title = Cowon D2 gia nhập 'câu lạc bộ 16 GB'
 url = https://vnexpress.net/cowon-d2-gia-nhap-cau-lac-bo-16-gb-1500501.html
 
 [www.facebook.com]
-match = -30.0%%
-title = 29 tháng 2
-url = https://www.facebook.com/photo.php?fbid=925380399591113&id=100063574839369&set=a.647966903999132&locale=vi_VN
+match = 0.0%%
+title = Black Kingdom - D2
+url = https://www.facebook.com/photo.php?fbid=925380399591113&id=100063574839369&set=a.647966903999132&locale=ml_IN
 
 [banhang.shopee.vn]
 match = -66.7%%
