--- a/images/chieu-lac-soc-18/config.ini
+++ b/images/chieu-lac-soc-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-soc-18.html
 lastopen = 2024-06-06 16:53:55
 
 [search]
-lastsearch = 2024-07-21 04:28:11
+lastsearch = 2024-07-21 05:21:06
 
 [scholar.google.com]
 match = -43.8%%
@@ -119,7 +119,7 @@ url = https://www.youtube.com/watch?v=hteDrQdI8UA
 [books.google.com]
 match = -243.8%%
 title = Địa chí Bá̆c Giang di sản hán nôm - Page 241 - Google Books Result
-url = https://books.google.com/books?id=aYBuAAAAMAAJ&pg=PA241&lpg=PA241&dq=chieu+lac+soc+18&source=bl&ots=oMfBzduWkz&sig=ACfU3U0kzvkWc75G3_O6vM8WeUtJw5Mvig&hl=en&sa=X&ved=2ahUKEwj-tczpx7aHAxXHJzQIHY1iDhcQ6AF6BAgfEAM
+url = https://books.google.com/books?id=aYBuAAAAMAAJ&pg=PA241&lpg=PA241&dq=chieu+lac+soc+18&source=bl&ots=oMfBzdyOhD&sig=ACfU3U2_CIQ75P2xwKaFssSYYvgDCLEKTw&hl=en&sa=X&ved=2ahUKEwjxu6_T07aHAxV7HEQIHRJ6CoEQ6AF6BAgYEAM
 
 [tuanhiep.com.vn]
 match = -56.2%%
