--- a/images/tham-ghe-nem/config.ini
+++ b/images/tham-ghe-nem/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-ghe-nem.html
 lastopen = 2024-06-07 00:34:34
 
 [search]
-lastsearch = 2024-07-21 04:44:38
+lastsearch = 2024-07-21 05:17:23
 
 [shopee.vn]
 match = -216.7%%
@@ -43,8 +43,8 @@ url = https://thinhgo.com/products/ghe-nem-dua-cao-cap-4000-913
 
 [tiki.vn]
 match = -241.7%%
-title = Thảm ghế, nệm ghế gỗ kích thước 2m x 60cm các màu nâu
-url = https://tiki.vn/tham-ghe-nem-ghe-go-kich-thuoc-2m-x-60cm-cac-mau-nau-p89638136.html
+title = Thảm ghế nệm ghế kích thước 2m2 x 55cm mẫu màu đỏ ...
+url = https://tiki.vn/tham-ghe-nem-ghe-kich-thuoc-2m2-x-55cm-mau-mau-do-moi-co-vien-p89638586.html
 
 [suongtuyet.com]
 match = -125.0%%
@@ -57,8 +57,8 @@ title = BỘ GHẾ ĐƠN MODEL 01
 url = https://nemkimcuong.vn/vi/san-pham/bo-ghe-don-model-01/
 
 [www.lazada.vn]
-match = -258.3%%
-title = Thảm ghế gỗ, nệm ghế, nệm sofa 2m x 55 cm màu đỏ có ...
+match = -266.7%%
+title = Thảm ghế gỗ, nệm ghế, nệm sofa 2m x 55 cm màu đỏ có viền
 url = https://www.lazada.vn/products/tham-ghe-go-nem-ghe-nem-sofa-2m-x-55-cm-mau-do-co-vien-i916236446.html
 
 [vn.my-best.com]
