--- a/images/tui-nem-korea-tuan-anh-16/config.ini
+++ b/images/tui-nem-korea-tuan-anh-16/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tui-nem-korea-tuan-anh-16.html
 lastopen = 2024-06-17 10:42:58
 
 [search]
-lastsearch = 2024-07-21 03:33:08
+lastsearch = 2024-07-21 05:11:54
 
 [tuananh.vn]
-match = -72.7%%
-title = Đệm bông ép
-url = https://tuananh.vn/dem-bong-ep-c51.html
+match = 12.0%%
+title = Đệm bông Adaptive Fiber 3M
+url = https://tuananh.vn/dem-bong-adaptive-3m-p345.html
 
 [demxanh.com]
 match = -48.0%%
@@ -32,9 +32,9 @@ title = Đệm bông ép Tuấn Anh Korea gấm Plus - chăn ga gối
 url = https://entershopping.vn/dem-bong-ep-tuan-anh-korea-gam-plus.html
 
 [sieuthidemonline.vn]
-match = -60.0%%
-title = Đệm Tuấn Anh - thương hiệu đệm hàng đầu tại Việt Nam!
-url = https://sieuthidemonline.vn/dem-tuan-anh/
+match = -24.0%%
+title = Giá khuyến mại đệm bông ép Korea Kaki cao cấp
+url = https://sieuthidemonline.vn/dem-bong-ep-korea-kaki/
 
 [suongtuyet.com]
 match = 16.0%%
