CI images update

--- a/images/bo-bon-mua-chun-chan-1602m/config.ini
+++ b/images/bo-bon-mua-chun-chan-1602m/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-bon-mua-chun-chan-1602m.html
 lastopen = 2024-06-07 01:32:26
 
 [search]
-lastsearch = 2024-07-21 00:48:33
+lastsearch = 2024-07-21 05:30:07
 
 [everon.online]
 match = 19.2%%
@@ -39,7 +39,7 @@ url = https://www.tiktok.com/discover/mưa-bụi-thuong-hai
 [books.google.com]
 match = -103.8%%
 title = Roster, Legislatures of Hawaii, 1841-1918: Constitutions of ...
-url = https://books.google.com/books?id=FHTf1B3ypPQC&pg=PT5&lpg=PT5&dq=bo+bon+mua+chun+chan+1602m&source=bl&ots=zGiUUOsJYB&sig=ACfU3U1kBHWo0VmiWCrxH9PLOQRMp2aRZQ&hl=en&sa=X&ved=2ahUKEwjbmcLdlraHAxWpFlkFHc2XCjcQ6AF6BAgXEAM
+url = https://books.google.com/books?id=FHTf1B3ypPQC&pg=PT5&lpg=PT5&dq=bo+bon+mua+chun+chan+1602m&source=bl&ots=zGiUVGpIXG&sig=ACfU3U3LieAriUELvSTvnZnbqNI26P_VaA&hl=en&sa=X&ved=2ahUKEwjvzrvV1baHAxVTEFkFHVo0CDgQ6AF6BAgaEAM
 
 [everonchinhhang.vn]
 match = -19.2%%
@@ -335,4 +335,14 @@ url = https://dongthap.gov.vn/api/v1/upload/downloadFile/Copy of mau danh sach c
 match = -50.0%%
 title = Bộ ga chun chăn chần bốn mùa Goodnight Mori 4 Chi Tiết
 url = https://bedding04.top/bo-ga-chun-chan-chan-bon-mua-goodnight-mori-4-chi-tiet/
+
+[www.booking.com]
+match = -11.5%%
+title = Holiday Home Levi chalet 1602 by Interhome
+url = https://www.booking.com/hotel/fi/holiday-home-levi-chalet-1602-by-interhome.vi.html
+
+[arduino.vn]
+match = -15.4%%
+title = Điều khiển LCD1602 bằng Arduino UNO
+url = http://arduino.vn/bai-viet/531-dieu-khien-lcd-bang-arduino-uno
 
