--- a/images/bo-ga-chun-chan-bon-mua-epm22063-180x200/config.ini
+++ b/images/bo-ga-chun-chan-bon-mua-epm22063-180x200/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/bo-ga-chun-chan-bon-mua-epm22063-180x200.html
 lastopen = 2024-06-07 00:34:05
 
 [search]
-lastsearch = 2024-07-21 00:34:26
+lastsearch = 2024-07-21 05:32:52
 
 [everon.com.vn]
-match = 11.1%%
-title = Bộ Chăn Ga Everon EPM 22070
-url = https://everon.com.vn/bo-chan-ga-everon-epm-22070/
+match = 3.8%%
+title = Bộ Chăn Ga Everon ESM21013
+url = https://everon.com.vn/bo-chan-ga-everon-esm21013/
 
 [everon.online]
 match = -5.0%%
@@ -23,8 +23,8 @@ url = https://everonhn.com.vn/bo-chan-ga-everon-epm-22063
 
 [www.everonvn.vn]
 match = -20.0%%
-title = Everon EPM-22070 | Bảng giá chi tiết bộ vỏ chăn ga gối ...
-url = https://www.everonvn.vn/chi-tiet/everon-epm22070.html
+title = Everon EPM-22069 | Bảng giá chi tiết bộ vỏ chăn ga gối ...
+url = https://www.everonvn.vn/chi-tiet/everon-epm22069.html
 
 [demxanh.com]
 match = 30.6%%
