--- a/images/chieu-lac-d2-14/config.ini
+++ b/images/chieu-lac-d2-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-d2-14.html
 lastopen = 2024-06-21 06:28:49
 
 [search]
-lastsearch = 2024-07-21 01:47:32
+lastsearch = 2024-07-21 05:31:58
 
 [www.diepxuan.com]
 match = 33.3%%
@@ -17,9 +17,9 @@ title = Sơ đồ sân bay Tân Sơn Nhất ga nội địa, quốc tế MỚI N
 url = https://vinpearl.com/vi/so-do-san-bay-tan-son-nhat
 
 [www.facebook.com]
-match = -13.3%%
-title = Ways Station Gaming
-url = https://www.facebook.com/waysstation/posts/ways-station-14-hoàn-thiện-thi-công-sẵn-sàng-xuất-quân-chỉ-còn-ít-ngày-nữa-thôi-/1026295534467736/
+match = -126.7%%
+title = Ways Station Gaming - "Nghiêng nước ...
+url = https://www.facebook.com/waysstation/photos/a.179106562519975/1171642583266363/?type=3
 
 [phongthuykyhoa.com]
 match = -73.3%%
