--- a/images/chieu-lac-soc-16/config.ini
+++ b/images/chieu-lac-soc-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-soc-16.html
 lastopen = 2024-06-09 23:48:14
 
 [search]
-lastsearch = 2024-07-21 04:28:45
+lastsearch = 2024-07-21 05:45:55
 
 [www.pnj.com.vn]
 match = -56.2%%
@@ -72,9 +72,9 @@ title = Bán Trà Đá 15K Chơi Chiêu Tráo 500K Đụng Ngay Con Trai ...
 url = https://www.youtube.com/watch?v=MIO-5nY_e5g
 
 [books.google.com]
-match = -143.8%%
-title = Chiến sĩ Cộng Hòa - Page 19 - Google Books Result
-url = https://books.google.com/books?id=X2clAAAAMAAJ&pg=RA9-PA19&lpg=RA9-PA19&dq=chieu+lac+soc+16&source=bl&ots=p30QVE31Ku&sig=ACfU3U0UFiQmeE0JeC36quvfpUa2Tr_doQ&hl=en&sa=X&ved=2ahUKEwjcnsX5x7aHAxWxJzQIHeEMDkEQ6AF6BAgfEAM
+match = -150.0%%
+title = American Soap Journal and Manufacturing Chemist
+url = https://books.google.com/books?id=EF1YAAAAYAAJ&pg=RA1-PA99&lpg=RA1-PA99&dq=chieu+lac+soc+16&source=bl&ots=sI9Ehyayy4&sig=ACfU3U0z2WwobSi9piU2FBntfXnC4oi6lw&hl=en&sa=X&ved=2ahUKEwi8wbmZ2baHAxV-lu4BHdA1Cv8Q6AF6BAgjEAM
 
 [dantocmiennui.vn]
 match = -125.0%%
