CI images update

--- a/images/chieu-dieu-hoa-lua-co-goi-14/config.ini
+++ b/images/chieu-dieu-hoa-lua-co-goi-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-lua-co-goi-14.html
 lastopen = 2024-06-09 22:25:57
 
 [search]
-lastsearch = 2024-07-21 04:44:49
+lastsearch = 2024-07-21 06:26:30
 
 [shopee.vn]
 match = -21.4%%
@@ -165,4 +165,9 @@ url = https://www.lazada.vn/products/chieu-dieu-hoa-mat-lanh-du-size-loai-day-ch
 match = 60.0%%
 title = Chiếu Điều Hòa Cao Su Non
 url = https://www.facebook.com/groups/753270865357544/
+
+[www.congnghieptieudung.vn]
+match = -46.4%%
+title = Sự thật về công dụng của chiếu điều hòa khiến người dùng ...
+url = https://www.congnghieptieudung.vn/su-that-ve-cong-dung-cua-chieu-dieu-hoa-khien-nguoi-dung-hieu-lam-dt34423
 
