--- a/images/chieu-lac-soc-08/config.ini
+++ b/images/chieu-lac-soc-08/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-soc-08.html
 lastopen = 2024-06-06 16:42:06
 
 [search]
-lastsearch = 2024-07-21 02:11:16
+lastsearch = 2024-07-21 06:32:34
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -207,9 +207,9 @@ title = Mổ u tuyến giáp có bị tái phát không? Các yếu tố ảnh h
 url = https://tamanhhospital.vn/mo-u-tuyen-giap-co-bi-tai-phat-khong/
 
 [dangcongsan.vn]
-match = -187.5%%
-title = Trách nhiệm pháp lý khi dừng đỗ trên cao tốc gây tai nạn?
-url = https://dangcongsan.vn/ban-doc/luat-su-cua-ban/trach-nhiem-phap-ly-khi-dung-do-tren-cao-toc-gay-tai-nan-672586.html
+match = -206.2%%
+title = Tổng Bí thư, Chủ tịch nước Trung Quốc Tập Cận Bình đến ...
+url = https://dangcongsan.vn/tong-bi-thu-nguyen-phu-trong/tong-bi-thu-chu-tich-nuoc-trung-quoc-tap-can-binh-den-dai-su-quan-viet-nam-tai-trung-quoc-vieng-tong-bi-thu-nguyen-phu-trong-672994.html
 
 [soctrang.gov.vn]
 match = -218.8%%
@@ -502,9 +502,9 @@ title = AEON MALL Tân Phú Celadon - Điểm vui chơi và mua sắm ...
 url = https://aeonmall-tanphuceladon.com.vn/
 
 [www.evn.com.vn]
-match = -206.2%%
-title = Tổng công ty Điện lực miền Bắc gắn biển công trình Trạm ...
-url = https://www.evn.com.vn/d6/news/Tong-cong-ty-Dien-luc-mien-Bac-gan-bien-cong-trinh-Tram-bien-ap-110kV-Yen-Lac-6-13-124915.aspx
+match = -131.2%%
+title = NHÀ LÃNH ĐẠO LỖI LẠC, TRỌN ĐỜI VÌ NƯỚC, VÌ DÂN
+url = https://www.evn.com.vn/d6/news/TONG-BI-THU-NGUYEN-PHU-TRONG-NHA-LANH-DAO-LOI-LAC-TRON-DOI-VI-NUOC-VI-DAN-6-12-125165.aspx
 
 [lug.vn]
 match = -31.2%%
@@ -572,9 +572,9 @@ title = Tình hình kinh tế - xã hội 6 tháng đầu nãm 2024 tỉnh Bình
 url = https://cucthongke.binhdinh.gov.vn/vi/news/tinh-hinh-kinh-te-xa-hoi/tinh-hinh-kinh-te-xa-hoi-6-thang-dau-nam-2024-tinh-binh-dinh-440.html
 
 [caobangtv.vn]
-match = -200.0%%
-title = Ban liên lạc Cựu chiến binh Trung đoàn Bộ binh 567 anh ...
-url = http://caobangtv.vn/tin-tuc-n74943/ban-lien-lac-cuu-chien-binh-trung-doan-bo-binh-567-anh-hung-trao-tang-2-nha-tinh-thuong-tai-phuong-song-bang.html
+match = -218.8%%
+title = Tổng Bí thư Nguyễn Phú Trọng - Nhà lãnh đạo lỗi lạc, trọn ...
+url = http://caobangtv.vn/tin-tuc-n75191/tong-bi-thu-nguyen-phu-trong--nha-lanh-dao-loi-lac-tron-doi-vi-nuoc-vi-dan.html
 
 [fecredit.com.vn]
 match = -62.5%%
@@ -685,4 +685,14 @@ url = https://congan.hatinh.gov.vn/bai-viet/nguoi-chu-nhiem-ngan-hang-mau-song_1
 match = -93.8%%
 title = Hệ thống cửa hàng Co.opSmile Coopsmile
 url = https://coopsmile.vn/pages/he-thong-cua-hang-co-opsmile
+
+[chinhphu.vn]
+match = -56.2%%
+title = Cổng Thông tin điện tử Chính phủ
+url = https://chinhphu.vn/
+
+[support.apple.com]
+match = -106.2%%
+title = Sử dụng AssistiveTouch trên Apple Watch
+url = https://support.apple.com/vi-vn/guide/watch/apdec70bfd2d/watchos
 
