--- a/images/ruot-nem-korea-9f-18/config.ini
+++ b/images/ruot-nem-korea-9f-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ruot-nem-korea-9f-18.html
 lastopen = 2024-06-10 00:54:35
 
 [search]
-lastsearch = 2024-07-21 05:33:14
+lastsearch = 2024-07-21 06:34:08
 
 [en.wikipedia.org]
 match = 15.0%%
@@ -87,9 +87,9 @@ title = Trump Selects Bitcoin-Owning Ohio Sen. JD Vance as Vice ...
 url = https://cryptonews.com/news/trump-selects-bitcoin-owning-ohio-sen-jd-vance-as-vice-presidential-candidate.htm
 
 [www.thespike.gg]
-match = -115.0%%
-title = Female Warriors vs 잇뽕따닥 | VALORANT Game ...
-url = https://www.thespike.gg/br/match/female-warriors-isppongttadag/120611
+match = -100.0%%
+title = Female Warriors vs SGA InCheon | VALORANT Game ...
+url = https://www.thespike.gg/br/match/female-warriors-sga-incheon/120610
 
 [br.ign.com]
 match = -125.0%%
@@ -414,7 +414,7 @@ url = https://8tharmy.korea.army.mil/site/index.asp
 [www.google.com]
 match = 0.0%%
 title = 
-url = https://www.google.com/search?sca_esv=be824180b2ab340a&q=Was+Park+Chung+Hee+assassinated?&sa=X&ved=2ahUKEwiI29Su1raHAxU4D1kFHSHbBDcQsZYEegQIVBAC
+url = https://www.google.com/search?sca_esv=3672c068e7112759&sca_upv=1&q=Was+Park+Chung+Hee+assassinated?&sa=X&ved=2ahUKEwjznc_847aHAxUpxuYEHecnBcgQsZYEegQINRAC
 
 [www.outlookindia.com]
 match = -170.0%%
