--- a/images/chieu-lac-soc-18/config.ini
+++ b/images/chieu-lac-soc-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-soc-18.html
 lastopen = 2024-06-06 16:53:55
 
 [search]
-lastsearch = 2024-07-21 05:21:06
+lastsearch = 2024-07-21 06:26:10
 
 [scholar.google.com]
 match = -43.8%%
@@ -515,4 +515,9 @@ url = https://www.qdnd.vn/van-hoa/van-hoc-nghe-thuat/tinh-anh-ban-chieu-592647
 match = -193.8%%
 title = Thông cáo đặc biệt về Lễ tang Tổng Bí thư Nguyễn Phú ...
 url = https://vovgiaothong.vn/newsaudio/thong-cao-dac-biet-ve-le-tang-tong-bi-thu-nguyen-phu-trong-d39880.html
+
+[dichvucong.bocongan.gov.vn]
+match = -237.5%%
+title = Thông tin liên hệ hỗ trợ dịch vụ công lĩnh vực Quản lý Xuất ...
+url = https://dichvucong.bocongan.gov.vn/bocongan/tintuc/chitiet?matin=101
 
