--- a/images/ga-chun-dreamland-180x200-ct/config.ini
+++ b/images/ga-chun-dreamland-180x200-ct/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ga-chun-dreamland-180x200-ct.html
 lastopen = 2024-06-07 01:32:20
 
 [search]
-lastsearch = 2024-07-21 05:34:49
+lastsearch = 2024-07-21 06:27:04
 
 [demxanh.com]
 match = -42.9%%
@@ -12,9 +12,9 @@ title = Bộ chăn ga gối cotton 5 món chăn hè ga chun chần 17
 url = https://demxanh.com/bo-chan-ga-goi-cotton-5-mon-chan-he-ga-chun-chan-17.html
 
 [www.diepxuan.com]
-match = 25.0%%
-title = Ga phủ ESM20013 180x200 - Điệp Xuân
-url = https://www.diepxuan.com/ga-phu-esm20013-180x200.html
+match = 28.6%%
+title = Điệp Xuân Ga chun EPCARLESS 180x200
+url = https://www.diepxuan.com/ga-chun-epcarless-180x200.html
 
 [mgaleg.maryland.gov]
 match = -75.0%%
@@ -112,9 +112,9 @@ title = Batavus greenparks kettingkast [V7seXc]
 url = http://www.responsinator.com/?aaa&ccode=0001&classname=产品展示&mnid=51918&url=https://xn--80abg0cjq.xn--p1ai/5368124sdzhrozytomskrufe5fe43y
 
 [archive.org]
-match = -7.1%%
-title = Schumann frequenz live stream [tKao2f]
-url = https://archive.org/help/video.php?identifier=1944-arsenic-and-old-lace-este-mundo-e-um-hospicio-frank-capra-legendado&ht=480&wd=640&url=https://xn--80afptqn.xn--p1ai/8723491wwwhuoyanbaocomze5fe43y
+match = 7.1%%
+title = Video help, tips, and techniques
+url = https://archive.org/help/video.php?identifier=1944-arsenic-and-old-lace-este-mundo-e-um-hospicio-frank-capra-legendado&ht=480&wd=640&url=https://cbfl-krasnodar.ru/ib2jfavbfth9ap02-06qt70024rumafe85
 
 [www.semex.com]
 match = -32.1%%
@@ -152,9 +152,9 @@ title = Here Is Staley Farms Golf Community In Beautiful North Kansas ...
 url = http://www.staleyfarmshomeskc.com/docs/news-frame.asp?title=Here Is Staley Farms Golf Community In Beautiful North Kansas ...&page=https://xn--80afptqn.xn--p1ai/5392784wwwsp47euorgc4fe43y
 
 [www.lebguide.com]
-match = -39.3%%
-title = Criminology jobs columbus ohio - LebGuide.com
-url = http://www.lebguide.com/lebanon/hotels/redir.asp?link=https://xn--43-6kch9bxbh4f.xn--p1ai/V2EPYSIDs53afe
+match = -21.4%%
+title = Irving child advocacy center - LebGuide.com
+url = http://www.lebguide.com/lebanon/hotels/redir.asp?link=https://xn--75-6kc3bfr2e.xn--p1ai/2914385753misclinicv4fe36a
 
 [news.google.it]
 match = -3.6%%
