--- a/images/man-re-trang-12/config.ini
+++ b/images/man-re-trang-12/config.ini
@@ -4,11 +4,11 @@ url = https://www.diepxuan.com/man-re-trang-12.html
 lastopen = 2024-06-07 00:52:43
 
 [search]
-lastsearch = 2024-07-20 23:50:33
+lastsearch = 2024-07-21 06:31:40
 
 [burningman.org]
-match = 0.0%%
-title = 
+match = -60.0%%
+title = The 10 Principles of Burning Man
 url = https://burningman.org/about/10-principles/
 
 [www.usatoday.com]
@@ -647,8 +647,8 @@ title = T-Mobile® Official Site: Get Even More Without Paying More
 url = https://www.t-mobile.com/
 
 [www.walmart.com]
-match = -246.7%%
-title = Walmart's July Deals are here with savings up to 50 percent Off
+match = -106.7%%
+title = Walmart.com | Save Money. Live Better
 url = https://www.walmart.com/
 
 [www.frontlineeducation.com]
