CI images update

--- a/images/nem-lo-xo-everon-kingkoil-160x200x27-clfi/config.ini
+++ b/images/nem-lo-xo-everon-kingkoil-160x200x27-clfi/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-lo-xo-everon-kingkoil-160x200x27-clfi.html
 lastopen = 2024-06-06 17:09:48
 
 [search]
-lastsearch = 2024-07-21 03:13:27
+lastsearch = 2024-07-21 08:05:13
 
 [www.everonvn.vn]
 match = 29.6%%
@@ -32,9 +32,9 @@ title = Nệm Everon
 url = https://www.diepxuan.com/everon/nem-everon.html
 
 [www.amazon.com]
-match = 2.5%%
-title = Amazon.com: Customer Questions & Answers
-url = https://www.amazon.com/ask/questions/asin/B07D7WGGW6
+match = -21.4%%
+title = Hard time finding wide shoes
+url = https://www.amazon.com/gp/customer-reviews/R2GKUOHHLO4QN3
 
 [forum.mattressunderground.com]
 match = -31.7%%
@@ -52,9 +52,9 @@ title = Audio Grade capacitors catharsis - AudioKarma
 url = https://audiokarma.org/forums/index.php?threads/audio-grade-capacitors-catharsis.907641/
 
 [db.audioasylum.com]
-match = -75.0%%
-title = Search of All Forums
-url = https://db.audioasylum.com/cgi/search.mpl?author=afro18&forum=ALL&sortRank=None
+match = -45.5%%
+title = Search of Vinyl Asylum
+url = https://db.audioasylum.com/cgi/search.mpl?searchtext=damping&b=AND&topic=&topics_only=Y&author=&date1=&date2=&slowmessage=&sort=date&sortOrder=DESC&SelectForumvinyl=vinyl
 
 [www.youtube.com]
 match = 0.0%%
