--- a/images/tui-warmdream-15/config.ini
+++ b/images/tui-warmdream-15/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tui-warmdream-15.html
 lastopen = 2024-06-10 00:24:28
 
 [search]
-lastsearch = 2024-07-21 03:32:08
+lastsearch = 2024-07-21 08:00:25
 
 [www.lazada.vn]
 match = -268.8%%
@@ -12,9 +12,9 @@ title = 【Hàng gia dụng dida】 dán xốp dán tường, Tự dính, 3D, kh
 url = https://www.lazada.vn/products/hang-gia-dung-dida-dan-xop-dan-tuong-tu-dinh-3d-khong-tham-nuoc-23-m-de-trang-tri-tuong-nha-i2583516490.html
 
 [shopee.vn]
-match = -206.2%%
-title = Túi Đựng Bút Hình Xe Tăng Sức Chứa Lớn Tiện Dụng Cho ...
-url = https://shopee.vn/Túi-Đựng-Bút-Hình-Xe-Tăng-Sức-Chứa-Lớn-Tiện-Dụng-Cho-Học-Sinh-i.600986218.23171442783
+match = -212.5%%
+title = Trò chơi thẻ để bàn Dream Sleepwalker Tacaro Witt Series ...
+url = https://shopee.vn/Trò-chơi-thẻ-để-bàn-Dream-Sleepwalker-Tacaro-Witt-Series-Warm-Dream-10.6-*-6.2-Phiên-bản-chính-hãng-i.992098593.28954099934
 
 [noveltoon.vn]
 match = -100.0%%
@@ -62,9 +62,9 @@ title = Sparky - Chapter 22 - BelleBasBleue - Avatar
 url = https://archiveofourown.org/works/30860870/chapters/87508054
 
 [osnat.bandcamp.com]
-match = -81.2%%
-title = בזמן אחר - אסנת הראל | Osnat Harel
-url = https://osnat.bandcamp.com/album/-
+match = -225.0%%
+title = Ave Maria אדון הסליחות - בזמן אחר - אסנת הראל | Osnat Harel
+url = https://osnat.bandcamp.com/track/ave-maria
 
 [demxanh.com]
 match = -181.2%%
@@ -119,7 +119,7 @@ url = https://www.dailymail.co.uk/tvshowbiz/article-7671041/Rob-Kardashian-treat
 [www.facebook.com]
 match = -25.0%%
 title = Chăn ga gối đệm Điệp Xuân
-url = https://www.facebook.com/diepxuanco/
+url = https://www.facebook.com/diepxuanco/?locale=nb_NO
 
 [extenzee.com]
 match = -262.5%%
@@ -177,9 +177,9 @@ title = kids' handle it lightning bolt rain boot - Crocs Kids Handle It Rain ...
 url = https://m.veryberryfrozenyogurt.com/blogs/mjaprkvo-147/
 
 [mechanicaldesign-job.com]
-match = -31.2%%
-title = checked bag policy delta
-url = https://mechanicaldesign-job.com/products/tqqvnqki-195/
+match = -206.2%%
+title = marc jacobs men wallets - farfetch marc jacobs wallet ...
+url = https://mechanicaldesign-job.com/blogs/kkfggukv-199//
 
 [www.instagram.com]
 match = -237.5%%
