--- a/images/chan-5-kg-kq-song/config.ini
+++ b/images/chan-5-kg-kq-song/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chan-5-kg-kq-song.html
 lastopen = 2024-06-09 23:17:50
 
 [search]
-lastsearch = 2024-07-21 06:33:10
+lastsearch = 2024-07-21 08:05:48
 
 [en.wikipedia.org]
-match = -16.7%%
-title = Kikuko Inoue
-url = https://en.wikipedia.org/wiki/Kikuko_Inoue
+match = -45.5%%
+title = Tetsu Inada
+url = https://en.wikipedia.org/wiki/Tetsu_Inada
 
 [kpop.fandom.com]
 match = -47.1%%
@@ -34,7 +34,7 @@ url = https://www.ncbi.nlm.nih.gov/pmc/articles/PMC9317998/
 [books.google.com]
 match = -11.8%%
 title = Cumulated Index Medicus
-url = https://books.google.com/books?id=KlBiDKi_dngC&pg=PA5960&lpg=PA5960&dq=chan+5+kg+kq+song&source=bl&ots=BOWVII2p69&sig=ACfU3U2D0pGZzGWTOX6gBZUB2R0eib_5Jw&hl=en&sa=X&ved=2ahUKEwiJ54Lh47aHAxWnweYEHYOlCNAQ6AF6BAgYEAM
+url = https://books.google.com/books?id=KlBiDKi_dngC&pg=PA5960&lpg=PA5960&dq=chan+5+kg+kq+song&source=bl&ots=BOWVIJZv1h&sig=ACfU3U2hFjEEuDX8NJMO3PMlgBSTJl-eSA&hl=en&sa=X&ved=2ahUKEwjN5Zy7-LaHAxWSFlkFHZ_SCLIQ6AF6BAgaEAM
 
 [www.ateezstoryline.com]
 match = 0.0%%
