--- a/images/chieu-truc-thai-den14/config.ini
+++ b/images/chieu-truc-thai-den14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-truc-thai-den14.html
 lastopen = 2024-06-09 23:36:30
 
 [search]
-lastsearch = 2024-07-21 00:50:38
+lastsearch = 2024-07-21 08:03:44
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -12,9 +12,9 @@ title = Chiếu trúc thai đen14
 url = https://www.diepxuan.com/chieu-truc-thai-den14.html
 
 [demxanh.com]
-match = 14.3%%
-title = Chiếu Trúc cao cấp hạt Đen - Hà Nội
-url = https://demxanh.com/chieu-truc-den.html
+match = -28.6%%
+title = [Hot] Bảng giá Chiếu trúc khuyến mãi 2023
+url = https://demxanh.com/bang-gia-chieu-truc-2018.html
 
 [www.lazada.vn]
 match = -81.0%%
@@ -27,9 +27,9 @@ title = Chieu truc thai lan hàng chính hãng, giao nhanh
 url = https://tiki.vn/search?q=chieu truc thai lan
 
 [chieutrelanlan.com]
-match = 9.5%%
-title = Chiếu trúc cao cấp Thái Lan 1m6x200cm
-url = https://chieutrelanlan.com/chieu-truc-cao-cap-thai-lan-1m6x2m-87.html
+match = -114.3%%
+title = Chiếu trúc thương hiệu Việt Nam, chất lượng tốt - Bảo hành ...
+url = https://chieutrelanlan.com/
 
 [www.youtube.com]
 match = -138.1%%
@@ -49,7 +49,7 @@ url = https://nhandan.vn/nguoi-dan-phan-khoi-vui-mung-khi-nhan-luong-huu-tro-cap
 [pctravinh.evnspc.vn]
 match = -90.5%%
 title = Trang thông tin điện tử - Công Ty Điện Lực Trà Vinh
-url = https://pctravinh.evnspc.vn/CMS_Article?AID=ARTICLE14030719&MID=F02-MNU202105-00000007
+url = https://pctravinh.evnspc.vn/CMS_Article?AID=ARTICLE14030719&MID=F02-MNU202105-00000041
 
 [baoapbac.vn]
 match = -47.6%%
@@ -417,9 +417,9 @@ title = SĂN DEAL TANJURO... - Hơi Thở Mặt Trời
 url = https://www.facebook.com/story.php?story_fbid=122155134374126177&id=61553785312238&post_id=61553785312238_122155134374126177
 
 [haiquanonline.com.vn]
-match = -109.5%%
-title = Doanh nghiệp kỳ vọng gia tăng xuất khẩu qua các kênh ...
-url = https://haiquanonline.com.vn/doanh-nghiep-ky-vong-gia-tang-xuat-khau-qua-cac-kenh-phan-phoi-quoc-te-188119.html
+match = -157.1%%
+title = Hải quan Online- Tin nhanh về Hải quan, Tài chính, Xuất nhập ...
+url = https://haiquanonline.com.vn/
 
 [baovinhphuc.com.vn]
 match = -104.8%%
