--- a/images/nem-sieu-nhe-9f-18/config.ini
+++ b/images/nem-sieu-nhe-9f-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-sieu-nhe-9f-18.html
 lastopen = 2024-06-09 23:55:48
 
 [search]
-lastsearch = 2024-07-21 02:24:03
+lastsearch = 2024-07-21 08:02:47
 
 [m.youtube.com]
 match = -144.4%%
@@ -72,9 +72,9 @@ title = U.S. DEPARTMENT OF COMMERCE National Technical ...
 url = https://www.ojp.gov/pdffiles1/Photocopy/93776NCJRS.pdf
 
 [m.facebook.com]
-match = -77.8%%
-title = Cộng Đồng Người Việt Denver | 👉♥️Nem chua bò
-url = https://m.facebook.com/groups/2078029092481022/posts/3794938424123405/
+match = -16.7%%
+title = NEM CUA BỂ VUÔNG SIÊU CHẤT LƯỢNG
+url = https://m.facebook.com/groups/213134222458659/posts/1913588515746546/
 
 [www.proz.com]
 match = -183.3%%
