--- a/images/ruot-nem-korea-160x200x09/config.ini
+++ b/images/ruot-nem-korea-160x200x09/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ruot-nem-korea-160x200x09.html
 lastopen = 2024-06-10 12:38:50
 
 [search]
-lastsearch = 2024-07-21 04:24:48
+lastsearch = 2024-07-21 08:04:53
 
 [www.diepxuan.com]
 match = 28.0%%
@@ -17,14 +17,14 @@ title = Seoul, Korea - Riot Games Global Offices & Job Openings
 url = https://www.riotgames.com/en/work-with-us/offices/seoul
 
 [www.linkedin.com]
-match = -56.0%%
-title = How to get a job in Korea as a non-Korean (again)
+match = 0.0%%
+title = 
 url = https://www.linkedin.com/pulse/how-get-job-korea-non-korean-again-ross-harman
 
 [www.youtube.com]
-match = -88.0%%
-title = Korean Beauty FAILS! Makeup and Skincare I Regret Buying
-url = https://www.youtube.com/watch?v=_yVrUs3dJzE
+match = -64.0%%
+title = EXTENSIVE TOUR OF ALL THE BEST FOOD IN SEOUL ...
+url = https://www.youtube.com/watch?v=VnDxsqL5AuE
 
 [english.seoul.go.kr]
 match = 0.0%%
