--- a/images/tham-ghe-da-dai/config.ini
+++ b/images/tham-ghe-da-dai/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-ghe-da-dai.html
 lastopen = 2024-06-07 00:36:57
 
 [search]
-lastsearch = 2024-07-20 19:54:04
+lastsearch = 2024-07-21 08:08:17
 
 [shopee.vn]
 match = -146.7%%
@@ -12,9 +12,9 @@ title = bộ thảm trải ghế giá tốt Tháng 7, 2024 | Mua ngay
 url = https://shopee.vn/search?keyword=bộ thảm trải ghế
 
 [ghedagiago.com]
-match = -100.0%%
-title = [MẪU VÀ GIÁ] 70+ BỘ BÀN GHẾ ĐÁ NGOÀI TRỜI
-url = https://ghedagiago.com/danh-muc/ban-ghe-da-ngoai-troi/
+match = -146.7%%
+title = TOP 45 MẪU GHẾ ĐÁ CÔNG VIÊN GIÁ TỐT TẠI XƯỞNG ...
+url = https://ghedagiago.com/danh-muc/ghe-da-cong-vien/
 
 [ghedatruongan.com]
 match = -80.0%%
