--- a/images/tham-giuong-bo-de-15/config.ini
+++ b/images/tham-giuong-bo-de-15/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-giuong-bo-de-15.html
 lastopen = 2024-06-07 00:36:08
 
 [search]
-lastsearch = 2024-07-20 23:44:34
+lastsearch = 2024-07-21 08:07:16
 
 [www.diepxuan.com]
 match = 10.0%%
@@ -12,9 +12,9 @@ title = Thảm giường Bode 160x200 - Điệp Xuân
 url = https://www.diepxuan.com/tham-giuong-bode-160x200.html
 
 [shopee.vn]
-match = -105.0%%
-title = Giường xếp - Giá Tốt, Miễn Phí Vận Chuyển, Đủ Loại
-url = https://shopee.vn/list/giường xếp
+match = -135.0%%
+title = Bộ màn cao cấp Goldcat cho giường Ghép trẻ em, thiết kế ...
+url = https://shopee.vn/Bộ-màn-cao-cấp-Goldcat-cho-giường-Ghép-trẻ-em-thiết-kế-cao-thoáng-thẩm-mĩ-và-tiện-lợi.-i.233701152.14502840826
 
 [sofatoanquoc.com]
 match = 30.0%%
@@ -47,9 +47,9 @@ title = Bộ giường tủ cổ điển nhập khẩu GR B15
 url = https://greenfurni.vn/bo-giuong-tu-co-dien-nhap-khau-gr-b15/
 
 [noithattana.vn]
-match = -75.0%%
-title = Bộ giường ngủ nhập khẩu Đài Loan cao cấp ...
-url = https://noithattana.vn/giuong-ngu/
+match = -140.0%%
+title = Bộ giường ngủ tân cổ điển giá rẻ đẹp, cao cấp nhập khẩu ...
+url = https://noithattana.vn/giuong-tu-tan-co-dien/
 
 [tiki.vn]
 match = -50.0%%
