CI images update

--- a/images/ruot-nem-korea-9f-18/config.ini
+++ b/images/ruot-nem-korea-9f-18/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/ruot-nem-korea-9f-18.html
 lastopen = 2024-06-10 00:54:35
 
 [search]
-lastsearch = 2024-07-21 06:34:08
+lastsearch = 2024-07-21 09:17:00
 
 [en.wikipedia.org]
-match = 15.0%%
-title = Timeline of Korean history
-url = https://en.wikipedia.org/wiki/Timeline_of_Korean_history
+match = -28.6%%
+title = Park Chung Hee
+url = https://en.wikipedia.org/wiki/Park_Chung_Hee
 
 [peacehistory-usfp.org]
 match = -45.0%%
@@ -302,9 +302,9 @@ title =
 url = https://languagelog.ldc.upenn.edu/nll/?p=39433
 
 [www.quora.com]
-match = -115.0%%
-title = Hey, can I move out at 18 and move to South Korea ...
-url = https://www.quora.com/Hey-can-I-move-out-at-18-and-move-to-South-Korea-and-get-a-degree-there
+match = -125.0%%
+title = Can I move to South Korea at the age of 18 and graduate ...
+url = https://www.quora.com/Can-I-move-to-South-Korea-at-the-age-of-18-and-graduate-from-a-high-school-there-without-my-parents-permission-I-live-in-America-and-the-age-of-adulthood-here-is-18-so-I-can-leave-the-country-right
 
 [hospitalfield.org.uk]
 match = -90.0%%
@@ -420,4 +420,9 @@ url = https://www.google.com/search?sca_esv=3672c068e7112759&sca_upv=1&q=Was+Par
 match = -170.0%%
 title = Outlook India - India's Best Magazine| Find Latest News, Top ...
 url = https://www.outlookindia.com/
+
+[twitter.com]
+match = -33.3%%
+title = Ifang Bremer
+url = https://twitter.com/IfangBremer/status/1801089320365031905
 
