--- a/images/vo-goi-epm20065-45x65/config.ini
+++ b/images/vo-goi-epm20065-45x65/config.ini
@@ -4,11 +4,11 @@ url = https://www.diepxuan.com/vo-goi-epm20065-45x65.html
 lastopen = 2024-07-07 18:08:23
 
 [search]
-lastsearch = 2024-07-21 01:48:37
+lastsearch = 2024-07-21 09:21:34
 
 [www.diepxuan.com]
-match = 19.0%%
-title = Vỏ gối EP1727 45x65 - Điệp Xuân
+match = 23.8%%
+title = Điệp Xuân Vỏ gối EP1727 45x65
 url = https://www.diepxuan.com/vo-goi-ep1727-45x65.html
 
 [tiki.vn]
@@ -22,8 +22,8 @@ title = Giảm giá Vỏ gối 45x65 EVERON chính hãng thêu dây leo ...
 url = https://muathongminh.vn/vo-goi-everon-45-x-65-cm-ko-kem-ruot-p.1__3862161698__114265811
 
 [www.everonqb.com]
-match = -104.8%%
-title = Vỏ gối ôm ESB23022 80x100 - Everon Quảng Bình Trang Chủ
+match = -47.6%%
+title = Everon Quảng Bình Vỏ gối ôm ESB23022 80x100
 url = https://www.everonqb.com/vo-goi-om-esb23022-80x100.html
 
 [mho.vn]
