--- a/images/chan-5-kg-kq-song/config.ini
+++ b/images/chan-5-kg-kq-song/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chan-5-kg-kq-song.html
 lastopen = 2024-06-09 23:17:50
 
 [search]
-lastsearch = 2024-07-21 08:05:48
+lastsearch = 2024-07-21 09:19:08
 
 [en.wikipedia.org]
 match = -45.5%%
@@ -42,9 +42,9 @@ title =
 url = https://www.ateezstoryline.com/ateez
 
 [www.youtube.com]
-match = -200.0%%
-title = DAILY UPLOADS DAY 1 JFJFJFJF #music #fortnite #ukulele ...
-url = https://www.youtube.com/watch?v=SfhTqo-KgkQ
+match = -88.2%%
+title = Don't Think Twice, It's Alright -- Lesson
+url = https://www.youtube.com/watch?v=NNVYwE-KGkQ
 
 [www.tiktok.com]
 match = 20.0%%
