--- a/images/chieu-lac-soc-14/config.ini
+++ b/images/chieu-lac-soc-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-soc-14.html
 lastopen = 2024-06-09 23:48:09
 
 [search]
-lastsearch = 2024-07-21 02:10:06
+lastsearch = 2024-07-21 09:21:03
 
 [www.pnj.com.vn]
 match = -56.2%%
@@ -395,4 +395,9 @@ url = https://satrafoods.com.vn/vn/khuyen-mai/uu-dai-bao-la-mua-hang-gia-tot-04-
 match = -193.8%%
 title = iPhone 14 bao nhiêu inch?Tất tần tật về kích thước màn ...
 url = https://m.viettelstore.vn/tin-tuc/iphone-14-bao-nhieu-inch
+
+[www.cloudynights.com]
+match = -87.5%%
+title = 14 vs 17.3 delos for DSO - Eyepieces
+url = https://www.cloudynights.com/topic/541231-14-vs-173-delos-for-dso/
 
