--- a/images/ruot-nem-korea-9f-16-20/config.ini
+++ b/images/ruot-nem-korea-9f-16-20/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/ruot-nem-korea-9f-16-20.html
 lastopen = 2024-06-10 00:40:18
 
 [search]
-lastsearch = 2024-07-20 23:52:04
+lastsearch = 2024-07-21 09:17:43
 
 [www.reddit.com]
-match = -82.6%%
-title = Nemesis hits rank 2 Korea - 1726 lp : r/leagueoflegends
+match = 4.3%%
+title = Nemesis hits rank 2 Korea - 1726 lp
 url = https://www.reddit.com/r/leagueoflegends/comments/17odwx2/nemesis_hits_rank_2_korea_1726_lp/
 
 [en.wikipedia.org]
-match = 0.0%%
-title = 
-url = https://en.wikipedia.org/wiki/Education_in_South_Korea
+match = -58.3%%
+title = Nam Joo-hyuk
+url = https://en.wikipedia.org/wiki/Nam_Joo-hyuk
 
 [liquipedia.net]
 match = 0.0%%
@@ -47,9 +47,9 @@ title = Global Newsletter #71: No More Fairytales - Extinction Rebellion
 url = https://rebellion.global/pt/blog/2022/12/16/global-newsletter-71/
 
 [www.cia.gov]
-match = -82.6%%
-title = N. KOREAN PATROL BOATS SEIZE U.S. SPY SHIP WITH ...
-url = https://www.cia.gov/readingroom/document/06638269
+match = -65.2%%
+title = THE KOREAN LABOR PARTY AND THE KIM IL-SONG ...
+url = https://www.cia.gov/readingroom/document/cia-rdp80t00246a064800250001-5
 
 [www.instagram.com]
 match = -78.3%%
@@ -107,9 +107,9 @@ title = Our 21 Best Fish Sauce Recipes
 url = https://www.foodandwine.com/condiments/fish-sauce
 
 [www.imdb.com]
-match = 9.1%%
-title = Lies and Alibis (2006)
-url = https://www.imdb.com/title/tt0409681/
+match = -39.1%%
+title = My favorite young male actors between 18-35
+url = https://www.imdb.com/list/ls055304256/
 
 [cryptoslate.com]
 match = -56.5%%
@@ -282,9 +282,9 @@ title = Introduction
 url = https://www.degruyter.com/document/doi/10.1515/9780824887964-013/pdf?licenseType=restricted
 
 [en.yna.co.kr]
-match = -56.5%%
-title = NORTH KOREA NEWSLETTER NO. 244 (January 10, 2013)
-url = https://en.yna.co.kr/view/AEN20130109006800325
+match = -117.4%%
+title = (2nd LD) PM: THAAD deployment 'difficult yet inevitable ...
+url = https://en.yna.co.kr/view/AEN20170907001852315
 
 [lol.fandom.com]
 match = 0.0%%
@@ -475,4 +475,9 @@ url = https://www.rferl.org/a/tajikistan-russia-rahmon-youtube-respect/32084773.
 match = -58.3%%
 title = Ifang Bremer
 url = https://twitter.com/IfangBremer/status/1801089320365031905
+
+[www.indiatoday.in]
+match = 0.0%%
+title = 
+url = https://www.indiatoday.in/television/celebrity/story/korean-star-nam-joo-hyuk-cleared-of-school-bullying-allegations-report-2500102-2024-02-10
 
