CI images update

--- a/images/giuong-mn-2/config.ini
+++ b/images/giuong-mn-2/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/giuong-mn-2.html
 lastopen = 2024-06-07 00:35:31
 
 [search]
-lastsearch = 2024-07-21 06:12:03
+lastsearch = 2024-07-21 09:48:26
 
 [dongagroup.vn]
 match = -272.7%%
@@ -192,9 +192,9 @@ title = Happy Deals - Happy Day 2 | RUNNNN Giường kèm ...
 url = https://m.facebook.com/groups/3252180871727606/posts/3866095360336151/
 
 [www.booking.com]
-match = -181.8%%
-title = Hampton Inn Minneapolis-Roseville,MN
-url = https://www.booking.com/hotel/us/hampton-inn-minneapolis-roseville-mn.vi.html
+match = -272.7%%
+title = Country Inn & Suites by Radisson, Shoreview, MN
+url = https://www.booking.com/hotel/us/country-inn-suites-shoreview.vi.html
 
 [chankyhotel.com]
 match = -172.7%%
