--- a/images/chieu-lac-d2-14/config.ini
+++ b/images/chieu-lac-d2-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-d2-14.html
 lastopen = 2024-06-21 06:28:49
 
 [search]
-lastsearch = 2024-07-21 05:31:58
+lastsearch = 2024-07-21 09:52:57
 
 [www.diepxuan.com]
 match = 33.3%%
@@ -17,9 +17,9 @@ title = Sơ đồ sân bay Tân Sơn Nhất ga nội địa, quốc tế MỚI N
 url = https://vinpearl.com/vi/so-do-san-bay-tan-son-nhat
 
 [www.facebook.com]
-match = -126.7%%
-title = Ways Station Gaming - "Nghiêng nước ...
-url = https://www.facebook.com/waysstation/photos/a.179106562519975/1171642583266363/?type=3
+match = 20.0%%
+title = Rạp Chiếu Phim Cũ
+url = https://www.facebook.com/phimhaygiare/
 
 [phongthuykyhoa.com]
 match = -73.3%%
@@ -62,9 +62,9 @@ title = Nhận biết - phân biệt: "Hạt lạc - Hạt đỗ". Lớp Nhà tr
 url = https://mngiaquat.longbien.edu.vn/hoat-dong-chuyen-mon-khoi-nha-tre/nhan-biet-phan-biet-hat-lac-hat-do-lop-nha-tre-d2/ctmb/9991/669168
 
 [shopee.vn]
-match = -226.7%%
-title = Bộ đồ nam cộc tay mặc hè DSQ cotton 4 chiều thêu logo ...
-url = https://shopee.vn/Bộ-đồ-nam-cộc-tay-mặc-hè-DSQ-cotton-4-chiều-thêu-logo-ngực-phối-in-hình-lá-phong-D2-monogram-BH119P-i.29600811.24469535417
+match = -206.7%%
+title = Trống Cajon AB-D2 có tay vặn chỉnh kèm EQ kết nối loa
+url = https://shopee.vn/Trống-Cajon-AB-D2-có-tay-vặn-chỉnh-kèm-EQ-kết-nối-loa-Tặng-bao-và-dây-jack-3m-i.37429989.9030570402
 
 [quangharvest.com]
 match = -186.7%%
@@ -92,9 +92,9 @@ title = Ways Station Bình Thạnh: 🏠 281 Nguyễn Văn Đậu, P. ...
 url = https://m.facebook.com/waysstation/photos/a.179106562519975/1189872421443379/?type=3
 
 [www.youtube.com]
-match = -113.3%%
-title = BLAH BLAH BLAH !giai !muagear !exitlag
-url = https://www.youtube.com/watch?v=724k4J4gc-Q
+match = -206.7%%
+title = BẠN SẼ CÓ ĐẦY ẮP ĐIỀU GÌ CHO TRONG 7 NGÀY TỚI (22/7 ...
+url = https://www.youtube.com/watch?v=-klqkSOsUvU
 
 [grandpark-vinhomes.com]
 match = -186.7%%
@@ -350,4 +350,9 @@ url = https://play.google.com/store/apps/details?id=demo.smartspaces.d2i.co&hl=v
 match = -193.3%%
 title = Hệ thống siêu thị mẹ bầu và em bé concung.com 1084 ...
 url = https://concung.com/tim-sieu-thi/d2-40b-doan-nguyen-tuan-ap-4-xa-hung-long-huyen-binh-chanh-thanh-pho-ho-chi-minh-address-708.html
+
+[smarthomekit.vn]
+match = -193.3%%
+title = Đèn âm trần Yeelight Mesh Downlight M2 Pro YLTS03YL
+url = https://smarthomekit.vn/san-pham/yeelight-m2-pro/
 
