--- a/images/chieu-lac-gam-16/config.ini
+++ b/images/chieu-lac-gam-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-gam-16.html
 lastopen = 2024-06-09 23:10:09
 
 [search]
-lastsearch = 2024-07-21 03:27:28
+lastsearch = 2024-07-21 09:50:15
 
 [www.diepxuan.com]
 match = 22.2%%
@@ -152,9 +152,9 @@ title = lịch thi đấu sea games 32 ngày 16 tháng 05
 url = https://caodangtkv.edu.vn/Xsn/20240615-77kfuhesoi kèo tài xỉu việt nam malaysia.html
 
 [www.facebook.com]
-match = 7.1%%
-title = Cuối Giờ Chiều
-url = https://www.facebook.com/cuoigiochieu/
+match = -22.2%%
+title = Nhược Lạc
+url = https://www.facebook.com/nhuoclac.writing/
 
 [suckhoedoisong.vn]
 match = -225.0%%
