--- a/images/nem-caosu-lien-a-160x200x10/config.ini
+++ b/images/nem-caosu-lien-a-160x200x10/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-caosu-lien-a-160x200x10.html
 lastopen = 2024-07-02 14:09:53
 
 [search]
-lastsearch = 2024-07-21 09:16:40
+lastsearch = 2024-07-21 09:53:07
 
 [nemgiakho.com]
 match = 7.4%%
@@ -37,9 +37,9 @@ title = Nệm Cao su Liên Á Classic 160x200x10. Tặng kèm cover ...
 url = https://www.lazada.vn/products/nem-cao-su-lien-a-classic-160x200x10-tang-kem-cover-bao-ve-nem-i536998043.html
 
 [tiki.vn]
-match = -11.1%%
-title = Mua Nệm Cao Su Thiên Nhiên Liên Á - Ladome Blue
-url = https://tiki.vn/nem-cao-su-thien-nhien-lien-a-p23482047.html?spid=56383513
+match = 0.0%%
+title = Mua Nệm Cao Su Thiên Nhiên Liên Á - Classic
+url = https://tiki.vn/nem-cao-su-thien-nhien-lien-a-p23482047.html?spid=56383508
 
 [demcaosuliena.com]
 match = 52.0%%
@@ -78,8 +78,8 @@ url = https://www.diepxuan.com/nem-caosu-lien-a-classic-160x200x10.html
 
 [nem.vn]
 match = -14.8%%
-title = NEM.VN NHÀ PHÂN PHỐI NỆM HÀNG ĐẦU VIỆT NAM
-url = https://nem.vn/
+title = NỆM CAO SU THIÊN NHIÊN LIÊN Á – CLASSIC - NEM.VN
+url = https://nem.vn/nem-cao-su-thien-nhien-lien-a-classic
 
 [khodem.vn]
 match = -37.0%%
