--- a/images/nem-everon-180x200x15-extrafoam/config.ini
+++ b/images/nem-everon-180x200x15-extrafoam/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-everon-180x200x15-extrafoam.html
 lastopen = 2024-06-06 17:10:38
 
 [search]
-lastsearch = 2024-07-21 03:33:28
+lastsearch = 2024-07-21 09:47:07
 
 [www.everonvn.vn]
 match = -22.6%%
@@ -37,9 +37,9 @@ title = ĐỆM BÔNG ÉP EVERON - Akasi
 url = https://akasi.com.vn/san-pham/dem-bong-ep-everon/
 
 [demxanh.com]
-match = -19.4%%
-title = Đệm Foam Everon ExtraFoam chính hãng giá rẻ Hà Nội
-url = https://demxanh.com/dem-foam-everon-extrafoam.html
+match = -16.1%%
+title = Đệm Everon chính hãng, đệm bông ép Hàn Quốc giá Sốc
+url = https://demxanh.com/dem-bong-ep-everon.html
 
 [everon.online]
 match = -6.5%%
@@ -92,9 +92,9 @@ title = Nệm bông ép Everon Ceramic - Nệm Hana
 url = https://nemhana.com/nem-bong-ep-everon-ceramic/
 
 [vuanem.com]
-match = 12.9%%
-title = Nệm Bông Ép Everon Giá Rẻ Chính Hãng
-url = https://vuanem.com/blog/nem-bong-ep-everon.html
+match = 3.2%%
+title = Chăn Ga Gối Nệm Everon Chính Hãng Giá Rẻ
+url = https://vuanem.com/brand/everon
 
 [www.lazada.vn]
 match = -38.7%%
