--- a/images/nem-pyeoda-thuong-16/config.ini
+++ b/images/nem-pyeoda-thuong-16/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/nem-pyeoda-thuong-16.html
 lastopen = 2024-06-18 17:43:07
 
 [search]
-lastsearch = 2024-07-21 02:26:53
+lastsearch = 2024-07-21 09:49:21
 
 [changagoidemtamhao.com]
-match = -5.0%%
-title = Bộ Chăn Ga Gối PYEODA LSP
-url = https://changagoidemtamhao.com/bo-chan-ga-goi-pyeoda-lsp
+match = -10.0%%
+title = Đệm PYEODA
+url = https://changagoidemtamhao.com/dem-pyeoda
 
 [demsingapore.com]
 match = -70.0%%
@@ -17,9 +17,9 @@ title = Bộ chăn ga gối Singapore Gold 5 gối Pyeoda 16
 url = https://demsingapore.com/bo-chan-ga-goi-singapore-5-goi-gold-pyeoda-16.html
 
 [demxanh.com]
-match = -100.0%%
-title = Ga gối chun chần Tencel Pyeoda Hàn Quốc đa sắc 3 món 16
-url = https://demxanh.com/ga-goi-chun-chan-tencel-pyeoda-han-quoc-da-sac-3-mon-16.html
+match = -105.0%%
+title = Đệm Xanh-Chuỗi Cửa Hàng Bán Chăn Ga Gối Đệm hàng đầu
+url = https://demxanh.com/
 
 [www.facebook.com]
 match = -45.0%%
