CI images update

--- a/images/chieu-lac-soc-18/config.ini
+++ b/images/chieu-lac-soc-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-soc-18.html
 lastopen = 2024-06-06 16:53:55
 
 [search]
-lastsearch = 2024-07-21 06:26:10
+lastsearch = 2024-07-21 10:31:15
 
 [scholar.google.com]
 match = -43.8%%
@@ -222,9 +222,9 @@ title = Chuyển phát nhanh Phương Trang ...
 url = https://futaexpress.vn/chi-nhanh
 
 [baolongan.vn]
-match = -125.0%%
-title = Một ngày ở làng dệt chiếu lác Long Cang, Cần Đước
-url = https://baolongan.vn/mot-ngay-o-lang-det-chieu-lac-long-cang-can-duoc-a5230.html
+match = -31.2%%
+title = Giữ nghề dệt chiếu Long Cang
+url = https://baolongan.vn/giu-nghe-det-chieu-long-cang-a169502.html
 
 [baothuathienhue.vn]
 match = -200.0%%
@@ -377,9 +377,9 @@ title = CẦN XE KÉO CONT 01X20'DC từ CÁT LÁI GIANG NAM - ...
 url = https://m.facebook.com/groups/logisticsvietnam/posts/8429178217116624/
 
 [shopee.vn]
-match = -75.0%%
-title = chiếu lác xuất khẩu 1m8 chiếu dầy cao cấp
-url = https://shopee.vn/chiếu-lác-xuất-khẩu-1m8-chiếu-dầy-cao-cấp-i.275355238.7156323941
+match = 25.0%%
+title = Chiếu Lác Trắng Xếp Gọn
+url = https://shopee.vn/Chiếu-Lác-Trắng-Xếp-Gọn-i.58697470.8505363108
 
 [chieulongdinh.com.vn]
 match = -6.2%%
@@ -497,9 +497,9 @@ title = Nữ diễn viên kém 18 tuổi nói về nụ hôn với Việt Anh
 url = https://vietnamnet.vn/nu-dien-vien-kem-18-tuoi-noi-ve-nu-hon-voi-viet-anh-2303486.html
 
 [baobinhphuoc.com.vn]
-match = -193.8%%
-title = Cụm thi đua số 7 sơ kết thi đua và hội thảo báo chí đa ...
-url = https://baobinhphuoc.com.vn/news/1/160277/cum-thi-dua-so-7-so-ket-thi-dua-va-hoi-thao-bao-chi-da-truyen-thong
+match = -206.2%%
+title = VFF thông báo tạm dừng tổ chức các giải bóng đá kể từ ...
+url = https://baobinhphuoc.com.vn/news/18/160320/vff-thong-bao-tam-dung-to-chuc-cac-giai-bong-da-ke-tu-ngay-20-7
 
 [vinhphuc.gov.vn]
 match = -206.2%%
@@ -520,4 +520,19 @@ url = https://vovgiaothong.vn/newsaudio/thong-cao-dac-biet-ve-le-tang-tong-bi-th
 match = -237.5%%
 title = Thông tin liên hệ hỗ trợ dịch vụ công lĩnh vực Quản lý Xuất ...
 url = https://dichvucong.bocongan.gov.vn/bocongan/tintuc/chitiet?matin=101
+
+[www.mpi.gov.vn]
+match = -112.5%%
+title = Cổng thông tin điện tử Bộ Kế hoạch và Đầu tư
+url = https://www.mpi.gov.vn/
+
+[www.quora.com]
+match = -106.2%%
+title = What are some swear words in Vietnamese?
+url = https://www.quora.com/What-are-some-swear-words-in-Vietnamese
+
+[quankhu2.vn]
+match = -20.0%%
+title = Quân khu 2
+url = http://quankhu2.vn/
 
