CI images update

--- a/images/chieu-cay-moc-hoa18/config.ini
+++ b/images/chieu-cay-moc-hoa18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-moc-hoa18.html
 lastopen = 2024-06-09 22:43:05
 
 [search]
-lastsearch = 2024-07-21 05:46:18
+lastsearch = 2024-07-21 10:45:58
 
 [hoa18.com]
 match = -84.2%%
@@ -157,9 +157,9 @@ title = Soái Ca Comic – Truyện Tranh Online
 url = https://soaicacomic.top/
 
 [trithucvn.co]
-match = -152.6%%
-title = Quân đội Bangladesh thực thi lệnh giới nghiêm khi các ...
-url = https://trithucvn.co/kinh-te/quan-doi-bangladesh-thuc-thi-lenh-gioi-nghiem-khi-cac-cuoc-bieu-tinh-sinh-vien-leo-thang.html
+match = -173.7%%
+title = Ông Trump nói ông đã có 'cuộc gọi rất tốt' với Tổng thống ...
+url = https://trithucvn.co/the-gioi/ong-trump-noi-ong-da-co-cuoc-goi-rat-tot-voi-tong-thong-ukraine-zelensky.html
 
 [bptv.vn]
 match = -57.9%%
@@ -207,9 +207,9 @@ title = Mỗi địa phương phải xác định được sản phẩm công ..
 url = https://tuoitrethudo.vn/moi-dia-phuong-phai-xac-dinh-duoc-san-pham-cong-nghiep-van-hoa-254820.html
 
 [baothanhhoa.vn]
-match = -142.1%%
-title = 18 năm đồng hành tiếp lửa đam mê tri thức cho học sinh ...
-url = https://baothanhhoa.vn/vnpt-thanh-hoa-18-nam-dong-hanh-tiep-lua-dam-me-tri-thuc-cho-hoc-sinh-tinh-thanh-219919.htm
+match = -157.9%%
+title = Xứ Thanh - Nơi hội tụ sản phẩm tinh hoa (Bài cuối): Làng ...
+url = https://baothanhhoa.vn/xu-thanh-noi-hoi-tu-san-pham-tinh-hoa-bai-cuoi-lang-nghe-va-lang-nghe-truyen-thong-bat-nhip-xu-huong-thi-truong-220117.htm
 
 [zingtruyen.top]
 match = -136.8%%
