--- a/images/chan-3-kg/config.ini
+++ b/images/chan-3-kg/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chan-3-kg.html
 lastopen = 2024-06-09 21:50:05
 
 [search]
-lastsearch = 2024-07-21 06:33:45
+lastsearch = 2024-07-21 10:46:09
 
 [silverwow.net]
 match = -255.6%%
@@ -29,7 +29,7 @@ url = https://www.amazon.de/-/en/Durable-Quality-Digital-Kitchen-Measuring/dp/B0
 [fetchthelove.com]
 match = 0.0%%
 title = 
-url = https://fetchthelove.com/en-de/blogs/necklace/how-heavy-is-a-silver-necklace
+url = https://fetchthelove.com/en-gb/blogs/necklace/how-heavy-is-a-silver-necklace
 
 [www.kylechandesign.com]
 match = -177.8%%
@@ -132,9 +132,9 @@ title =
 url = https://m.indiamart.com/proddetail/mild-steel-c-channel-21330745648.html
 
 [www.amazon.com]
-match = -344.4%%
-title = Tees Factory KG-5542671HK Koguma-chan Mini ...
-url = https://www.amazon.com/Factory-KG-5542671HK-Koguma-chan-Character-Basket/dp/B0BW2HGFKD
+match = -366.7%%
+title = Maruchan Ramen Chicken, Instant Ramen Noodles ...
+url = https://www.amazon.com/Maruchan-Ramen-Chicken-3-0-Pack/dp/B07222R3Y5
 
 [www.robe.cz]
 match = -366.7%%
