--- a/images/nem-sieu-nhe-9f-18/config.ini
+++ b/images/nem-sieu-nhe-9f-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-sieu-nhe-9f-18.html
 lastopen = 2024-06-09 23:55:48
 
 [search]
-lastsearch = 2024-07-21 08:02:47
+lastsearch = 2024-07-21 10:49:15
 
 [m.youtube.com]
 match = -144.4%%
@@ -42,9 +42,9 @@ title = [TPHCM] Bún Nem Nướng Siêu To Ăn Là No Lăn Ở Quận 10
 url = https://www.grab.com/vn/en/food-blog/trending-food/tphcm-bun-nem-nuong-sieu-to-an-la-no-lan-o-quan-10/
 
 [www.diepxuan.com]
-match = 11.1%%
-title = Điệp Xuân Nệm siêu nhẹ
-url = https://www.diepxuan.com/nem-sieu-nhe.html
+match = -16.7%%
+title = Nệm siêu nhẹ 180x200x05 - Điệp Xuân
+url = https://www.diepxuan.com/nem-sieu-nhe-180x200x05.html
 
 [shopcamping.vn]
 match = -144.4%%
@@ -72,9 +72,9 @@ title = U.S. DEPARTMENT OF COMMERCE National Technical ...
 url = https://www.ojp.gov/pdffiles1/Photocopy/93776NCJRS.pdf
 
 [m.facebook.com]
-match = -16.7%%
-title = NEM CUA BỂ VUÔNG SIÊU CHẤT LƯỢNG
-url = https://m.facebook.com/groups/213134222458659/posts/1913588515746546/
+match = -77.8%%
+title = Cộng Đồng Người Việt Denver | 👉♥️Nem chua bò
+url = https://m.facebook.com/groups/2078029092481022/posts/3794938424123405/
 
 [www.proz.com]
 match = -183.3%%
@@ -117,9 +117,9 @@ title = Nem rán, chạo tôm của Việt Nam lọt top món ăn nhẹ ngon ...
 url = https://www.vietnam.vn/nem-ran-chao-tom-cua-viet-nam-lot-top-mon-an-nhe-ngon-nhat-the-gioi/
 
 [www.linkedin.com]
-match = -144.4%%
-title = interior #furniture #tongthaunoithat #nem #nemfurniture
-url = https://www.linkedin.com/posts/nemfurniturejsc_interior-furniture-tongthaunoithat-activity-7165253575495864320-0-4j
+match = 5.6%%
+title = NEM Furniture JSC's Post
+url = https://www.linkedin.com/posts/nemfurniturejsc_nem-nemfurniture-arevovietnam-activity-6908959978208534528-AOAy
 
 [forum.nameberry.com]
 match = -16.7%%
